xfce-trunk Basque translation update
(Old svn revision: 28987)

--- a/po/eu.po
+++ b/po/eu.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-23 16:06+0100\n"
-"PO-Revision-Date: 2008-11-09 15:56+0200\n"
+"PO-Revision-Date: 2008-11-30 08:52+0200\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
 "Language-Team: Euskara <Librezale@librezale.org>\n"
 "Language: eu\n"
@@ -1498,7 +1498,7 @@ msgstr "Idatzi '%s --help' erabilerarako."
 #: ../exo-helper/main.c:152
 #, c-format
 msgid "Invalid helper type \"%s\""
-msgstr "Laguntzaile \"%s\" mota baliogabea "
+msgstr "\"%s\" laguntzaile mota baliogabea"
 
 #: ../exo-helper/main.c:192
 #, c-format
