* Fix all compiler warnings and fix some possibly uninitialized variables.
(Old svn revision: 28994)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-08	Nick Schermer <nick@xfce.org>
+
+	* Fix all compiler warnings and fix some possibly uninitialized variables.
+
 2008-11-23	Jannis Pohlmann <jannis@xfce.org>
 
 	* exo-helper/main.c: Oops, I actually broke the --launch parameter. Fixed.
