* sv.po: Swedish translation update (Daniel Nylander)
 	* sv.po: Swedish translation update (Daniel Nylander) 
  
  
 	* sv.po, LINGUAS: Swedish translation added (Daniel Nylander) 
  
  
  
 	* sv.po, LINGUAS: Swedish translation added (Daniel Nylander) 
  
  
  
 	* sv.po, LINGUAS: Swedish translation added (Daniel Nylander) 
  
 	* sv.po, LINGUAS: Swedish translation added (Daniel Nylander) 
  
  
  
  
  
  
  
  
  
  
  
  
 	* sv.po: Swedish translation update (Daniel Nylander) 
  
 	* sv.po: Swedish translation update (Daniel Nylander) 
  
  
  
 	* sv.po: Swedish translation update (Daniel Nylander) 
 

(Old svn revision: 29000)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-10  Alexander Toresson <eulex@xfce.org>
+
+	* sv.po: Swedish translation update (Daniel Nylander)
+
 2008-12-07  Piarres Beobide <pi@beobide.net>
 
         * eu.po: Basque translation update
