Translations updates - es ja uk
(Old svn revision: 29018)

--- a/po/es.po
+++ b/po/es.po
@@ -204,7 +204,7 @@ msgstr "Todos los iconos"
 #: ../exo/exo-icon-chooser-dialog.c:115
 #: ../exo/exo-icon-chooser-dialog.c:262
 msgid "Image Files"
-msgstr "Archivos de Imagenes"
+msgstr "Archivos de imágenes"
 
 #. setup the header label
 #: ../exo/exo-icon-chooser-dialog.c:205
