Translations udpates - ja
(Old svn revision: 29052)

--- a/po-doc/ChangeLog
+++ b/po-doc/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-25  Maximilian Schleiss <maximilian@xfce.org>
+
+	* id.po; LINGUAS: Indonesian translation added (Andhika Padmawan)
+
 2008-11-16  Maximilian Schleiss <maximilian@xfce.org>
 
         * tr.po; LINGUAS: Turkish translation added (Samed Beyribey)
