* NEWS: Update NEWS for the upcoming 0.3.93 release.
(Old svn revision: 29121)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-10	Jannis Pohlmann <jannis@xfce.org>
+
+	* NEWS: Update NEWS for the upcoming 0.3.93 release.
+
 2008-12-08	Nick Schermer <nick@xfce.org>
 
 	* exo/exo-icon-view.c: Don't setup bindings for shift+n and shift+p
