* libexo-0.3.pot, *.pot: Update translation files just to make sure 	  they are all up to date for the string-freeze release.
(Old svn revision: 29122)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-01-10	Jannis Pohlmann <jannis@xfce.org>
+
+	* libexo-0.3.pot, *.pot: Update translation files just to make sure 
+	  they are all up to date for the string-freeze release.
+
 2008-12-25  Maximilian Schleiss <maximilian@xfce.org>
 
 	* id.po: Indonesian translation update (Andhika Padmawan)
