--- a/po/da.po
+++ b/po/da.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Libexo 0.3.92\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-11-22 12:34+0100\n"
+"POT-Creation-Date: 2009-01-10 23:57+0100\n"
 "PO-Revision-Date: 2008-11-26 23:05+0100\n"
 "Last-Translator: Per Kongstad <p_kongstad@op.pl>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
@@ -44,10 +44,8 @@ msgstr "størrelse"
 msgid "The size of the icon to render in pixels."
 msgstr "Størrelsen af ikonet der skal renderes i pixels."
 
-#: ../exo/exo-gdk-pixbuf-extensions.c:770
-#: ../exo/exo-mount-point.c:208
-#: ../exo/exo-mount-point.c:237
-#: ../exo/exo-mount-point.c:425
+#: ../exo/exo-gdk-pixbuf-extensions.c:770 ../exo/exo-mount-point.c:208
+#: ../exo/exo-mount-point.c:237 ../exo/exo-mount-point.c:425
 #, c-format
 msgid "Failed to open file \"%s\": %s"
 msgstr "Kunne ikke åbne filen \"%s\": %s"
@@ -59,11 +57,13 @@ msgstr "Kunne ikke læse fil \"%s\": %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:873
 #, c-format
-msgid "Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
-msgstr "Kunne ikke indlæse billede \"%s\": Ukendt fejl, højst sandsynligt en ødelagt billedfil"
+msgid ""
+"Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
+msgstr ""
+"Kunne ikke indlæse billede \"%s\": Ukendt fejl, højst sandsynligt en ødelagt "
+"billedfil"
 
-#: ../exo/exo-icon-bar.c:249
-#: ../exo/exo-icon-view.c:785
+#: ../exo/exo-icon-bar.c:249 ../exo/exo-icon-view.c:785
 msgid "Orientation"
 msgstr "Orientering"
 
@@ -71,23 +71,19 @@ msgstr "Orientering"
 msgid "The orientation of the iconbar"
 msgstr "Orienteringen af ikonbjælken"
 
-#: ../exo/exo-icon-bar.c:266
-#: ../exo/exo-icon-view.c:802
+#: ../exo/exo-icon-bar.c:266 ../exo/exo-icon-view.c:802
 msgid "Pixbuf column"
 msgstr "Pixbuf-kolonne"
 
-#: ../exo/exo-icon-bar.c:267
-#: ../exo/exo-icon-view.c:803
+#: ../exo/exo-icon-bar.c:267 ../exo/exo-icon-view.c:803
 msgid "Model column used to retrieve the icon pixbuf from"
 msgstr "Modelkolonne som bliver brugt til at hente ikon-pixbuf fra"
 
-#: ../exo/exo-icon-bar.c:282
-#: ../exo/exo-icon-view.c:929
+#: ../exo/exo-icon-bar.c:282 ../exo/exo-icon-view.c:929
 msgid "Text column"
 msgstr "Tekstkolonne"
 
-#: ../exo/exo-icon-bar.c:283
-#: ../exo/exo-icon-view.c:930
+#: ../exo/exo-icon-bar.c:283 ../exo/exo-icon-view.c:930
 msgid "Model column used to retrieve the text from"
 msgstr "Modelkolonne som bliver brugt til at hente teksten fra"
 
@@ -107,33 +103,27 @@ msgstr "Aktiv"
 msgid "Active item index"
 msgstr "Aktivt elementindeks"
 
-#: ../exo/exo-icon-bar.c:319
-#: ../exo/exo-icon-bar.c:320
+#: ../exo/exo-icon-bar.c:319 ../exo/exo-icon-bar.c:320
 msgid "Active item fill color"
 msgstr "Fyldfarve for aktivt element"
 
-#: ../exo/exo-icon-bar.c:326
-#: ../exo/exo-icon-bar.c:327
+#: ../exo/exo-icon-bar.c:326 ../exo/exo-icon-bar.c:327
 msgid "Active item border color"
 msgstr "Kantfarve for aktivt element"
 
-#: ../exo/exo-icon-bar.c:333
-#: ../exo/exo-icon-bar.c:334
+#: ../exo/exo-icon-bar.c:333 ../exo/exo-icon-bar.c:334
 msgid "Active item text color"
 msgstr "Tekstfarve for aktivt element"
 
-#: ../exo/exo-icon-bar.c:340
-#: ../exo/exo-icon-bar.c:341
+#: ../exo/exo-icon-bar.c:340 ../exo/exo-icon-bar.c:341
 msgid "Cursor item fill color"
 msgstr "Fyldfarve for markørelement"
 
-#: ../exo/exo-icon-bar.c:347
-#: ../exo/exo-icon-bar.c:348
+#: ../exo/exo-icon-bar.c:347 ../exo/exo-icon-bar.c:348
 msgid "Cursor item border color"
 msgstr "Kantfarve for markørelement"
 
-#: ../exo/exo-icon-bar.c:354
-#: ../exo/exo-icon-bar.c:355
+#: ../exo/exo-icon-bar.c:354 ../exo/exo-icon-bar.c:355
 msgid "Cursor item text color"
 msgstr "Tekstfarve for markørelement"
 
@@ -203,8 +193,7 @@ msgid "All Icons"
 msgstr "Alle ikoner"
 
 #. EXO_ICON_CHOOSER_CONTEXT_FILE
-#: ../exo/exo-icon-chooser-dialog.c:115
-#: ../exo/exo-icon-chooser-dialog.c:262
+#: ../exo/exo-icon-chooser-dialog.c:115 ../exo/exo-icon-chooser-dialog.c:262
 msgid "Image Files"
 msgstr "Billedfiler"
 
@@ -267,7 +256,9 @@ msgstr "Opmærkningskolonne"
 
 #: ../exo/exo-icon-view.c:757
 msgid "Model column used to retrieve the text if using Pango markup"
-msgstr "Modelkolonne som bliver brugt til at hente teksten, hvis der bliver brugt Pango-opmærkning"
+msgstr ""
+"Modelkolonne som bliver brugt til at hente teksten, hvis der bliver brugt "
+"Pango-opmærkning"
 
 #: ../exo/exo-icon-view.c:771
 msgid "Icon View Model"
@@ -278,8 +269,10 @@ msgid "The model for the icon view"
 msgstr "Modellen der bruges til ikonvisning"
 
 #: ../exo/exo-icon-view.c:786
-msgid "How the text and icon of each item are positioned relative to each other"
-msgstr "Hvordan hvert elements tekst og ikoner er placeret i forhold til hinanden"
+msgid ""
+"How the text and icon of each item are positioned relative to each other"
+msgstr ""
+"Hvordan hvert elements tekst og ikoner er placeret i forhold til hinanden"
 
 #: ../exo/exo-icon-view.c:818
 msgid "Reorderable"
@@ -313,25 +306,25 @@ msgstr "Markeringstilstand"
 msgid "The selection mode"
 msgstr "Markeringstilstanden"
 
-#: ../exo/exo-icon-view.c:880
-#: ../exo/exo-tree-view.c:166
+#: ../exo/exo-icon-view.c:880 ../exo/exo-tree-view.c:166
 msgid "Single Click"
 msgstr "Enkeltklik"
 
-#: ../exo/exo-icon-view.c:881
-#: ../exo/exo-tree-view.c:167
+#: ../exo/exo-icon-view.c:881 ../exo/exo-tree-view.c:167
 msgid "Whether the items in the view can be activated with single clicks"
 msgstr "Om elementerne i visningen kan aktiveres med enkeltklik"
 
-#: ../exo/exo-icon-view.c:897
-#: ../exo/exo-tree-view.c:183
+#: ../exo/exo-icon-view.c:897 ../exo/exo-tree-view.c:183
 msgid "Single Click Timeout"
 msgstr "Tidsgrænse for enkeltklik"
 
-#: ../exo/exo-icon-view.c:898
-#: ../exo/exo-tree-view.c:184
-msgid "The amount of time after which the item under the mouse cursor will be selected automatically in single click mode"
-msgstr "Hvor lang tid der skal gå, inden elementet under musemarkøren bliver valgt automatisk i enkeltklikstilstand"
+#: ../exo/exo-icon-view.c:898 ../exo/exo-tree-view.c:184
+msgid ""
+"The amount of time after which the item under the mouse cursor will be "
+"selected automatically in single click mode"
+msgstr ""
+"Hvor lang tid der skal gå, inden elementet under musemarkøren bliver valgt "
+"automatisk i enkeltklikstilstand"
 
 #: ../exo/exo-icon-view.c:913
 msgid "Spacing"
@@ -361,8 +354,7 @@ msgstr "Gennemsigtigheden (alpha) af markeringsboksen"
 msgid "Preview"
 msgstr "Forhåndsvisning"
 
-#: ../exo/exo-thumbnail-preview.c:139
-#: ../exo/exo-thumbnail-preview.c:281
+#: ../exo/exo-thumbnail-preview.c:139 ../exo/exo-thumbnail-preview.c:281
 msgid "No file selected"
 msgstr "Ingen fil valgt"
 
@@ -391,8 +383,12 @@ msgid "_Add a new toolbar"
 msgstr "_Tilføj ny værktøjsbjælke"
 
 #: ../exo/exo-toolbars-editor.c:230
-msgid "Drag an item onto the toolbars above to add it, from the toolbars in the items table to remove it."
-msgstr "Træk et element til værktøjsbjælken ovenfor for at tilføje det, fra værktøjsbjælkerne i elementtabellen for at fjerne det."
+msgid ""
+"Drag an item onto the toolbars above to add it, from the toolbars in the "
+"items table to remove it."
+msgstr ""
+"Træk et element til værktøjsbjælken ovenfor for at tilføje det, fra "
+"værktøjsbjælkerne i elementtabellen for at fjerne det."
 
 #: ../exo/exo-toolbars-editor.c:543
 msgid "Separator"
@@ -535,10 +531,8 @@ msgstr "  --strip-comments  Fjern kommentarer fra XML-filer\n"
 msgid "  --strip-content   Remove node contents from XML files\n"
 msgstr "  --strip-content   Fjern knudeindhold fra XML-filer (node)\n"
 
-#: ../exo-csource/main.c:305
-#: ../exo-desktop-item-edit/main.c:153
-#: ../exo-mount/main.c:122
-#: ../exo-mount-notify/main.c:167
+#: ../exo-csource/main.c:305 ../exo-desktop-item-edit/main.c:153
+#: ../exo-mount/main.c:122 ../exo-mount-notify/main.c:169
 #: ../exo-open/main.c:129
 #, c-format
 msgid ""
@@ -554,10 +548,8 @@ msgstr ""
 "Skrevet af Benedikt Meurer <benny@xfce.org>.\n"
 "\n"
 
-#: ../exo-csource/main.c:309
-#: ../exo-desktop-item-edit/main.c:157
-#: ../exo-mount/main.c:126
-#: ../exo-mount-notify/main.c:171
+#: ../exo-csource/main.c:309 ../exo-desktop-item-edit/main.c:157
+#: ../exo-mount/main.c:126 ../exo-mount-notify/main.c:173
 #: ../exo-open/main.c:133
 #, c-format
 msgid ""
@@ -573,10 +565,8 @@ msgstr ""
 "%s-kildepakken.\n"
 "\n"
 
-#: ../exo-csource/main.c:313
-#: ../exo-desktop-item-edit/main.c:161
-#: ../exo-mount/main.c:130
-#: ../exo-mount-notify/main.c:175
+#: ../exo-csource/main.c:313 ../exo-desktop-item-edit/main.c:161
+#: ../exo-mount/main.c:130 ../exo-mount-notify/main.c:177
 #: ../exo-open/main.c:137
 #, c-format
 msgid "Please report bugs to <%s>.\n"
@@ -666,8 +656,14 @@ msgid "Use _startup notification"
 msgstr "Brug op_startsbesked"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:431
-msgid "Select this option to enable startup notification when the command is run from the file manager or the menu. Not every application supports startup notification."
-msgstr "Vælg denne indstilling for at slå opstartsbesked til, når kommandoen bliver kørt fra filhåndteringen eller menuen. Ikke alle programmer understøtter dette."
+msgid ""
+"Select this option to enable startup notification when the command is run "
+"from the file manager or the menu. Not every application supports startup "
+"notification."
+msgstr ""
+"Vælg denne indstilling for at slå opstartsbesked til, når kommandoen bliver "
+"kørt fra filhåndteringen eller menuen. Ikke alle programmer understøtter "
+"dette."
 
 #. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #. *              and sync your translations with the translations in Thunar and xfce4-panel.
@@ -730,10 +726,8 @@ msgstr "Foruddefineret URL når man opretter en henvisning"
 msgid "Preset icon when creating a desktop file"
 msgstr "Foruddefineret ikon når man opretter en skrivebordsfil"
 
-#: ../exo-desktop-item-edit/main.c:79
-#: ../exo-helper/main.c:67
-#: ../exo-mount/main.c:74
-#: ../exo-mount-notify/main.c:77
+#: ../exo-desktop-item-edit/main.c:79 ../exo-helper/main.c:67
+#: ../exo-mount/main.c:74 ../exo-mount-notify/main.c:77
 msgid "Print version information and exit"
 msgstr "Udskriv versionsinformation og afslut"
 
@@ -742,9 +736,8 @@ msgstr "Udskriv versionsinformation og afslut"
 msgid "[FILE|FOLDER]"
 msgstr "[FIL|MAPPE]"
 
-#: ../exo-desktop-item-edit/main.c:138
-#: ../exo-mount/main.c:108
-#: ../exo-mount-notify/main.c:153
+#: ../exo-desktop-item-edit/main.c:138 ../exo-mount/main.c:108
+#: ../exo-mount-notify/main.c:155
 msgid "Failed to open display"
 msgstr "Kunne ikke åbne skærm"
 
@@ -1049,10 +1042,6 @@ msgstr "Kunne ikke åbne helpers.rc i skrivetilstand"
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
 msgstr "Foretrukne programmer (Webbrowser, postprogram og terminal-emulering)"
 
-#: ../exo-helper/exo-preferred-applications.desktop.in.h:3
-msgid "Xfce 4 Preferred Applications"
-msgstr "Foretrukne programmer til Xfce 4"
-
 #: ../exo-helper/main.c:42
 msgid "Failed to execute default Web Browser"
 msgstr "Kunne ikke køre foretrukne webbrowser"
@@ -1074,20 +1063,24 @@ msgstr ""
 "indstillingsdialog"
 
 #: ../exo-helper/main.c:69
-msgid "Launch the default helper of TYPE with the optional PARAMETER, where TYPE is one of the following values."
-msgstr "Start standardhjælpen af TYPE med mulige PARAMETRE, hvor TYPE er en af følgende værdier."
-
-#: ../exo-helper/main.c:69
-msgid "TYPE [PARAMETER]"
-msgstr "TYPE [PARAMETRE]"
-
-#: ../exo-helper/main.c:70
 msgid "Settings manager socket"
 msgstr "Sokkel til indstillingshåndtering"
 
-#: ../exo-helper/main.c:70
+#: ../exo-helper/main.c:69
 msgid "SOCKET ID"
 msgstr "SOKKEL-ID"
+
+#: ../exo-helper/main.c:70
+msgid ""
+"Launch the default helper of TYPE with the optional PARAMETER, where TYPE is "
+"one of the following values."
+msgstr ""
+"Start standardhjælpen af TYPE med mulige PARAMETRE, hvor TYPE er en af "
+"følgende værdier."
+
+#: ../exo-helper/main.c:70
+msgid "TYPE [PARAMETER]"
+msgstr "TYPE [PARAMETRE]"
 
 #: ../exo-helper/main.c:93
 msgid ""
@@ -1108,12 +1101,12 @@ msgstr ""
 msgid "Type '%s --help' for usage."
 msgstr "Tast '%s --help' for brug."
 
-#: ../exo-helper/main.c:149
+#: ../exo-helper/main.c:152
 #, c-format
 msgid "Invalid helper type \"%s\""
 msgstr "Ugyldig hjælpertype \"%s\""
 
-#: ../exo-helper/main.c:189
+#: ../exo-helper/main.c:192
 #, c-format
 msgid ""
 "%s (Xfce %s)\n"
@@ -1138,7 +1131,7 @@ msgstr ""
 "\n"
 "Rapportér venligst fejl til <%s>.\n"
 
-#: ../exo-helper/main.c:206
+#: ../exo-helper/main.c:209
 #, c-format
 msgid "Unknown helper arguments.\n"
 msgstr "Ukendt programargumenter.\n"
@@ -1270,15 +1263,13 @@ msgstr "Ukendt fejl"
 
 #. TRANSLATORS: a device is missing from the file system table (usually /etc/fstab)
 #. tell the caller that no matching device was found
-#: ../exo-mount/exo-mount-fstab.c:132
-#: ../exo-mount/exo-mount-hal.c:374
+#: ../exo-mount/exo-mount-fstab.c:132 ../exo-mount/exo-mount-hal.c:374
 #, c-format
 msgid "Device \"%s\" not found in file system device table"
 msgstr "Kunne ikke finde enheden \"%s\" i filsystemets enhedstabel"
 
 #. definitely not a device that we're able to mount, eject or unmount
-#: ../exo-mount/exo-mount-hal.c:224
-#: ../exo-mount/exo-mount-hal.c:280
+#: ../exo-mount/exo-mount-hal.c:224 ../exo-mount/exo-mount-hal.c:280
 #, c-format
 msgid "Given device \"%s\" is not a volume or drive"
 msgstr "Valgte enhed \"%s\" er ikke et arkiv eller drev"
@@ -1303,8 +1294,12 @@ msgstr "Du har ikke rettigheder til at montere arkivet \"%s\""
 
 #: ../exo-mount/exo-mount-hal.c:856
 #, c-format
-msgid "Blank discs cannot be mounted, use a CD recording application like Xfburn to record audio or data on the disc"
-msgstr "Blanke medier kan ikke monteres, brug et cd-brænderprogram som Xfburn til at brænde lyd eller data på mediet"
+msgid ""
+"Blank discs cannot be mounted, use a CD recording application like Xfburn to "
+"record audio or data on the disc"
+msgstr ""
+"Blanke medier kan ikke monteres, brug et cd-brænderprogram som Xfburn til at "
+"brænde lyd eller data på mediet"
 
 #: ../exo-mount/exo-mount-hal.c:867
 #, c-format
@@ -1376,8 +1371,12 @@ msgid "Must not specify both a HAL device UDI and a device file simultaneously"
 msgstr "Der må ikke angives både HAL-enheds UDI og enhedsfil på samme tid"
 
 #: ../exo-mount/main.c:154
-msgid "Cannot mount by HAL device UDI, because HAL support was disabled for this build"
-msgstr "Kan ikke montere med HAL-enheds UDI, da HAL-understøttelse var slået fra, da dette program blev kompileret"
+msgid ""
+"Cannot mount by HAL device UDI, because HAL support was disabled for this "
+"build"
+msgstr ""
+"Kan ikke montere med HAL-enheds UDI, da HAL-understøttelse var slået fra, da "
+"dette program blev kompileret"
 
 #: ../exo-mount/main.c:161
 #, c-format
@@ -1405,44 +1404,52 @@ msgid "Failed to mount \"%s\""
 msgstr "Kan ikke montere \"%s\""
 
 #. tell the user that the device can be removed now
-#: ../exo-mount-notify/main.c:111
+#: ../exo-mount-notify/main.c:113
 #, c-format
 msgid "The device \"%s\" is now safe to remove."
 msgstr "Enheden \"%s\" kan nu fjernes sikkert."
 
-#: ../exo-mount-notify/main.c:112
+#: ../exo-mount-notify/main.c:114
 msgid "Device is now safe to remove"
 msgstr "Enheden kan nu fjernes sikkert"
 
 #. read-only, just ejecting
-#: ../exo-mount-notify/main.c:224
+#: ../exo-mount-notify/main.c:226
 msgid "Ejecting device"
 msgstr "Skubber enheden ud"
 
-#: ../exo-mount-notify/main.c:225
+#: ../exo-mount-notify/main.c:227
 #, c-format
 msgid "The device \"%s\" is being ejected. This may take some time."
 msgstr "Enheden \"%s\" er sat til at skubbe ud. Dette kan tage nogen tid."
 
 #. read-only, just unmounting
-#: ../exo-mount-notify/main.c:230
+#: ../exo-mount-notify/main.c:232
 msgid "Unmounting device"
 msgstr "Afmonterer enhed"
 
-#: ../exo-mount-notify/main.c:231
+#: ../exo-mount-notify/main.c:233
 #, c-format
-msgid "The device \"%s\" is being unmounted by the system. Please do not remove the media or disconnect the drive."
-msgstr "Enheden \"%s\" bliver afmonteret af systemet. Fjern venligst ikke mediet eller drevet."
+msgid ""
+"The device \"%s\" is being unmounted by the system. Please do not remove the "
+"media or disconnect the drive."
+msgstr ""
+"Enheden \"%s\" bliver afmonteret af systemet. Fjern venligst ikke mediet "
+"eller drevet."
 
 #. not read-only, writing back data
-#: ../exo-mount-notify/main.c:238
+#: ../exo-mount-notify/main.c:240
 msgid "Writing data to device"
 msgstr "Skriver data til enhed"
 
-#: ../exo-mount-notify/main.c:239
+#: ../exo-mount-notify/main.c:241
 #, c-format
-msgid "There is data that needs to be written to the device \"%s\" before it can be removed. Please do not remove the media or disconnect the drive."
-msgstr "Der er data som skal skrives til enheden \"%s\" før den kan fjernes. Fjern venligst ikke mediet eller drevet."
+msgid ""
+"There is data that needs to be written to the device \"%s\" before it can be "
+"removed. Please do not remove the media or disconnect the drive."
+msgstr ""
+"Der er data som skal skrives til enheden \"%s\" før den kan fjernes. Fjern "
+"venligst ikke mediet eller drevet."
 
 #: ../exo-open/main.c:59
 msgid "Usage: exo-open [URLs...]"
@@ -1454,16 +1461,20 @@ msgstr "       exo-open --launch TYPE [PARAMETRE...]"
 
 #: ../exo-open/main.c:62
 msgid "  -?, --help                          Print this help message and exit"
-msgstr "  -?, --help                          Udskriv denne hjælpbesked og afslut"
+msgstr ""
+"  -?, --help                          Udskriv denne hjælpbesked og afslut"
 
 #: ../exo-open/main.c:63
-msgid "  -V, --version                       Print version information and exit"
-msgstr "  -V, --version                       Udskriv versionsinformation og afslut"
+msgid ""
+"  -V, --version                       Print version information and exit"
+msgstr ""
+"  -V, --version                       Udskriv versionsinformation og afslut"
 
 #: ../exo-open/main.c:65
 msgid ""
 "  --launch TYPE [PARAMETERs...]       Launch the preferred application of\n"
-"                                      TYPE with the optional PARAMETERs, where\n"
+"                                      TYPE with the optional PARAMETERs, "
+"where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
 "  --launch TYPE [PARAMETRE...]        Start foretrukne program for\n"
@@ -1472,7 +1483,8 @@ msgstr ""
 
 #: ../exo-open/main.c:69
 msgid ""
-"  --working-directory DIRECTORY       Default working directory for applications\n"
+"  --working-directory DIRECTORY       Default working directory for "
+"applications\n"
 "                                      when using the --launch option."
 msgstr ""
 "  --working-directory DIRECTORY       Standardarbejdsmappe for programmer\n"
@@ -1504,7 +1516,8 @@ msgid ""
 "you can pass the command line that should be run in the terminal)."
 msgstr ""
 "Hvis du ikke angiver tilvalget --launch, vil exo-open åbne alle angivne\n"
-"URL'er med deres foretrukne URL-håndtering. Ellers, hvis du angiver tilvalget --launch\n"
+"URL'er med deres foretrukne URL-håndtering. Ellers, hvis du angiver "
+"tilvalget --launch\n"
 ", kan du vælge hvilket foretrukket program du ønsker at køre og angive\n"
 "yderligere argumenter til programmet (f.eks. for TerminalEmulator\n"
 "kan du angive kommandolinje som skal køres i terminalen)."
@@ -1519,3 +1532,5 @@ msgstr "Kunne ikke køre det foretrukne program for kategorien \"%s\"."
 msgid "Failed to open URL \"%s\"."
 msgstr "Kunne ikke åbne URL'en \"%s\"."
 
+#~ msgid "Xfce 4 Preferred Applications"
+#~ msgstr "Foretrukne programmer til Xfce 4"
