--- a/po/eu.po
+++ b/po/eu.po
@@ -8,14 +8,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-11-23 16:06+0100\n"
+"POT-Creation-Date: 2009-01-10 23:57+0100\n"
 "PO-Revision-Date: 2008-11-30 08:52+0200\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
 "Language-Team: Euskara <Librezale@librezale.org>\n"
-"Language: eu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: eu\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 1.2.0\n"
 
@@ -58,7 +58,8 @@ msgstr "Huts \"%s\" fitxategia irakurtzerakoan: %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:873
 #, c-format
-msgid "Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
+msgid ""
+"Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
 msgstr ""
 "Huts \"%s\" irudia kargatzerakoan: Errore ezezaguna ziurrenik hondaturiko "
 "irudi fitxategia"
@@ -271,7 +272,8 @@ msgid "The model for the icon view"
 msgstr "Ikono ikuspegiaren modeloa"
 
 #: ../exo/exo-icon-view.c:786
-msgid "How the text and icon of each item are positioned relative to each other"
+msgid ""
+"How the text and icon of each item are positioned relative to each other"
 msgstr "Elementu bakoitzaren testu eta ikonoaren kokapena bestearekiko"
 
 #: ../exo/exo-icon-view.c:818
@@ -496,9 +498,10 @@ msgstr "       %s [aukerak] --build-list [[izen fitxategia]...]\n"
 msgid "  -h, --help        Print this help message and exit\n"
 msgstr "  -h, --help        Laguntza testu hau bistarazi eta irten\n"
 
-#: ../exo-csource/main.c:287
-msgid "  -v, --version     Print version information and exit\n"
-msgstr "  -v, --version     Bertsio xehetasunak bistarazi eta irten\n"
+#: ../exo-csource/main.c:289
+#, c-format
+msgid "  -V, --version     Print version information and exit\n"
+msgstr "  -V, --version     Bertsio xehetasunak bistarazi eta irten\n"
 
 #: ../exo-csource/main.c:290
 #, c-format
@@ -531,7 +534,7 @@ msgid "  --strip-content   Remove node contents from XML files\n"
 msgstr "  --strip-content   Ezabatu nodo edukiak XML fitxategietatik\n"
 
 #: ../exo-csource/main.c:305 ../exo-desktop-item-edit/main.c:153
-#: ../exo-mount/main.c:122 ../exo-mount-notify/main.c:167
+#: ../exo-mount/main.c:122 ../exo-mount-notify/main.c:169
 #: ../exo-open/main.c:129
 #, c-format
 msgid ""
@@ -548,7 +551,7 @@ msgstr ""
 "\n"
 
 #: ../exo-csource/main.c:309 ../exo-desktop-item-edit/main.c:157
-#: ../exo-mount/main.c:126 ../exo-mount-notify/main.c:171
+#: ../exo-mount/main.c:126 ../exo-mount-notify/main.c:173
 #: ../exo-open/main.c:133
 #, c-format
 msgid ""
@@ -564,7 +567,7 @@ msgstr ""
 "\n"
 
 #: ../exo-csource/main.c:313 ../exo-desktop-item-edit/main.c:161
-#: ../exo-mount/main.c:130 ../exo-mount-notify/main.c:175
+#: ../exo-mount/main.c:130 ../exo-mount-notify/main.c:177
 #: ../exo-open/main.c:137
 #, c-format
 msgid "Please report bugs to <%s>.\n"
@@ -735,7 +738,7 @@ msgid "[FILE|FOLDER]"
 msgstr "[FITXATEGI|KARPETA]"
 
 #: ../exo-desktop-item-edit/main.c:138 ../exo-mount/main.c:108
-#: ../exo-mount-notify/main.c:153
+#: ../exo-mount-notify/main.c:155
 msgid "Failed to open display"
 msgstr "Huts pantaila irekitzerakoan"
 
@@ -1036,23 +1039,103 @@ msgstr "Ez da komandoa ezarri"
 msgid "Failed to open helpers.rc for writing"
 msgstr "Huts helpers.rc idazteko idazterakoan"
 
-#: ../exo-helper/exo-preferred-applications-settings.c:40
-msgid "Failed to launch exo-preferred-applications"
-msgstr "Huts exo-hobetsitako-aplikazioak abiarazterakoan"
-
-#: ../exo-helper/exo-preferred-applications-settings.c:60
-msgid "Button Label|Preferred Applications"
-msgstr "Hobetsiriko Aplikazioak"
-
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
 msgstr ""
 "Hobetsiriko Aplikazioa (Web Nabigatzailea, ePosta Bezero eta Terminal "
 "Emuladorea)"
 
-#: ../exo-helper/exo-preferred-applications.desktop.in.h:3
-msgid "Xfce 4 Preferred Applications"
-msgstr "Xfce 4 Hobetsiriko Aplikazioak"
+#: ../exo-helper/main.c:42
+msgid "Failed to execute default Web Browser"
+msgstr "Huts lehenetsiriko web nabigatzailea exekutatzean"
+
+#: ../exo-helper/main.c:43
+msgid "Failed to execute default Mail Reader"
+msgstr "Huts lehenetsiriko posta bezeroa exekutatzean"
+
+#: ../exo-helper/main.c:44
+msgid "Failed to execute default Terminal Emulator"
+msgstr "Huts lehenetsiriko terminal emuladorea exekutatzean"
+
+#: ../exo-helper/main.c:68
+msgid ""
+"Open the Preferred Applications\n"
+"configuration dialog"
+msgstr "Ireki Xfce 4 hobetsiriko aplikazio\\bkonfigurazio leihoa"
+
+#: ../exo-helper/main.c:69
+msgid "Settings manager socket"
+msgstr "Ezarpen kudeatzaile socket-a"
+
+#: ../exo-helper/main.c:69
+msgid "SOCKET ID"
+msgstr "SOCKET IDa"
+
+#: ../exo-helper/main.c:70
+msgid ""
+"Launch the default helper of TYPE with the optional PARAMETER, where TYPE is "
+"one of the following values."
+msgstr ""
+"Abiarazi MOTA laguntzailea aukerako PARAMETRO honez, non MOTA hauetako balio "
+"bat izan daitekeen."
+
+#: ../exo-helper/main.c:70
+msgid "TYPE [PARAMETER]"
+msgstr "MOTA [PARAMETROA]"
+
+#: ../exo-helper/main.c:93
+msgid ""
+"The following TYPEs are supported for the --launch command:\n"
+"\n"
+"  WebBrowser       - The preferred Web Browser.\n"
+"  MailReader       - The preferred Mail Reader.\n"
+"  TerminalEmulator - The preferred Terminal Emulator."
+msgstr ""
+"Hurrengo MOTAk onartzen dira --launh komandoarekin:\n"
+"\n"
+"  WebBrowser       - Hobetsiriko web nabigatzailea.\n"
+"  MailReader       - Hobetsiriko posta bezeroa.\n"
+"  TerminalEmulator - Hobetsiriko terminal emuladorea."
+
+#: ../exo-helper/main.c:102
+#, c-format
+msgid "Type '%s --help' for usage."
+msgstr "Idatzi '%s --help' erabilerarako."
+
+#: ../exo-helper/main.c:152
+#, c-format
+msgid "Invalid helper type \"%s\""
+msgstr "\"%s\" laguntzaile mota baliogabea"
+
+#: ../exo-helper/main.c:192
+#, c-format
+msgid ""
+"%s (Xfce %s)\n"
+"\n"
+"Copyright (c) 2003-2006\n"
+"        os-cillation e.K. All rights reserved.\n"
+"\n"
+"Written by Benedikt Meurer <benny@xfce.org>.\n"
+"\n"
+"Built with Gtk+-%d.%d.%d, running Gtk+-%d.%d.%d.\n"
+"\n"
+"Please report bugs to <%s>.\n"
+msgstr ""
+"%s (Xfce %s)\n"
+"\n"
+"Copyright (c) 2003-2006\n"
+"        os-cillation e.K. All rights reserved.\n"
+"\n"
+"Benedikt Meurerek <benny@xfce.org> idatzia.\n"
+"\n"
+"Gtk+-%d.%d.%d erabiliaz eraikia,  Gtk+-%d.%d.%d erabiliaz exekutatua.\n"
+"\n"
+"Programa erroreen berri hemen eman: <%s>.\n"
+
+#: ../exo-helper/main.c:209
+#, c-format
+msgid "Unknown helper arguments.\n"
+msgstr "Laguntzaile argumentu ezezagunak.\n"
 
 #: ../exo-helper/helpers/Terminal.desktop.in.in.h:1
 msgid "Xfce Terminal"
@@ -1117,6 +1200,10 @@ msgstr "Links Testu Nabigatzailea"
 #: ../exo-helper/helpers/lynx.desktop.in.in.h:1
 msgid "Lynx Text Browser"
 msgstr "Lynx Testu Nabigatzailea"
+
+#: ../exo-helper/helpers/midori.desktop.in.in.h:1
+msgid "Midori"
+msgstr "Midori"
 
 #: ../exo-helper/helpers/mozilla-browser.desktop.in.in.h:1
 msgid "Mozilla Browser"
@@ -1220,6 +1307,18 @@ msgstr ""
 msgid "Audio CDs cannot be mounted, use Xfmedia to play the audio tracks"
 msgstr "Audio CD-ak ezin dira muntatu, Xfmedia erabili pistak erreproduzitzeko"
 
+#. TRANSLATORS: The user tried to eject a device although he's not privileged to do so.
+#: ../exo-mount/exo-mount-hal.c:932
+#, c-format
+msgid "You are not privileged to teardown the crypto layer"
+msgstr "Ez duzu kriptografia geruza desmuntatzeko baimenik"
+
+#. TRANSLATORS: An application is blocking a mounted volume from being ejected.
+#: ../exo-mount/exo-mount-hal.c:937
+#, c-format
+msgid "An application is preventing the crypto layer from being torn down"
+msgstr "Aplikazio batek kriptografia geruza  desmuntatzea ezintzen du"
+
 #. TRANSLATORS: User tried to unmount a volume, but is not privileged to do so.
 #: ../exo-mount/exo-mount-hal.c:1021
 #, c-format
@@ -1306,31 +1405,31 @@ msgid "Failed to mount \"%s\""
 msgstr "Huts \"%s\" muntatzerakoan"
 
 #. tell the user that the device can be removed now
-#: ../exo-mount-notify/main.c:111
+#: ../exo-mount-notify/main.c:113
 #, c-format
 msgid "The device \"%s\" is now safe to remove."
 msgstr "\"%s\" gailua orain ziurtasunez atera daiteke."
 
-#: ../exo-mount-notify/main.c:112
+#: ../exo-mount-notify/main.c:114
 msgid "Device is now safe to remove"
 msgstr "Gailua orain ziurtasunez atera daiteke"
 
 #. read-only, just ejecting
-#: ../exo-mount-notify/main.c:224
+#: ../exo-mount-notify/main.c:226
 msgid "Ejecting device"
 msgstr "Gailua ebazten"
 
-#: ../exo-mount-notify/main.c:225
+#: ../exo-mount-notify/main.c:227
 #, c-format
 msgid "The device \"%s\" is being ejected. This may take some time."
 msgstr "\"%s\" gailua ebatzia izango da. Honek denbora bat hartu lezake."
 
 #. read-only, just unmounting
-#: ../exo-mount-notify/main.c:230
+#: ../exo-mount-notify/main.c:232
 msgid "Unmounting device"
 msgstr "Gailua desmuntatzen"
 
-#: ../exo-mount-notify/main.c:231
+#: ../exo-mount-notify/main.c:233
 #, c-format
 msgid ""
 "The device \"%s\" is being unmounted by the system. Please do not remove the "
@@ -1340,11 +1439,11 @@ msgstr ""
 "edo medioa atera."
 
 #. not read-only, writing back data
-#: ../exo-mount-notify/main.c:238
+#: ../exo-mount-notify/main.c:240
 msgid "Writing data to device"
 msgstr "Datuak gailuan idazten"
 
-#: ../exo-mount-notify/main.c:239
+#: ../exo-mount-notify/main.c:241
 #, c-format
 msgid ""
 "There is data that needs to be written to the device \"%s\" before it can be "
@@ -1363,11 +1462,14 @@ msgstr "       exo-open --launch MOTA [PARAMETROAK...]"
 
 #: ../exo-open/main.c:62
 msgid "  -?, --help                          Print this help message and exit"
-msgstr "  -?, --help                          Laguntza testua hau bistarazi eta irten"
+msgstr ""
+"  -?, --help                          Laguntza testua hau bistarazi eta irten"
 
 #: ../exo-open/main.c:63
-msgid "  -v, --version                       Print version information and exit"
-msgstr "  -v, --version                       Bertsio xehetasunak bistarazi eta irten"
+msgid ""
+"  -V, --version                       Print version information and exit"
+msgstr ""
+"  -V, --version                       Bertsio xehetasunak bistarazi eta irten"
 
 #: ../exo-open/main.c:65
 msgid ""
@@ -1377,7 +1479,8 @@ msgid ""
 "                                      TYPE is one of the following values."
 msgstr ""
 "  --launch MOTA [PARAMETROak...]       Abiarazi MOTA motako aplikazio\n"
-"                                       gogokoena PARAMETROak parametroez non\n"
+"                                       gogokoena PARAMETROak parametroez "
+"non\n"
 "                                      MOTA hauetako balio bat izan behar da."
 
 #: ../exo-open/main.c:69
@@ -1433,121 +1536,20 @@ msgstr "Huts \"%s\" ataleko hobetsiriko aplikazioa irekitzerakoan."
 msgid "Failed to open URL \"%s\"."
 msgstr "Huts \"%s\" URL-a irekitzerakoan."
 
-#: ../exo-csource/main.c:289
-#, c-format
-msgid "  -V, --version     Print version information and exit\n"
-msgstr "  -V, --version     Bertsio xehetasunak bistarazi eta irten\n"
+#~ msgid "  -v, --version     Print version information and exit\n"
+#~ msgstr "  -v, --version     Bertsio xehetasunak bistarazi eta irten\n"
 
-#: ../exo-helper/main.c:42
-msgid "Failed to execute default Web Browser"
-msgstr "Huts lehenetsiriko web nabigatzailea exekutatzean"
+#~ msgid "Failed to launch exo-preferred-applications"
+#~ msgstr "Huts exo-hobetsitako-aplikazioak abiarazterakoan"
 
-#: ../exo-helper/main.c:43
-msgid "Failed to execute default Mail Reader"
-msgstr "Huts lehenetsiriko posta bezeroa exekutatzean"
+#~ msgid "Button Label|Preferred Applications"
+#~ msgstr "Hobetsiriko Aplikazioak"
 
-#: ../exo-helper/main.c:44
-msgid "Failed to execute default Terminal Emulator"
-msgstr "Huts lehenetsiriko terminal emuladorea exekutatzean"
+#~ msgid "Xfce 4 Preferred Applications"
+#~ msgstr "Xfce 4 Hobetsiriko Aplikazioak"
 
-#: ../exo-helper/main.c:68
-msgid ""
-"Open the Preferred Applications\n"
-"configuration dialog"
-msgstr "Ireki Xfce 4 hobetsiriko aplikazio\\bkonfigurazio leihoa"
-
-#: ../exo-helper/main.c:71
-msgid ""
-"Launch the default helper of TYPE with the optional PARAMETER, where TYPE is "
-"one of the following values."
-msgstr ""
-"Abiarazi MOTA laguntzailea aukerako PARAMETRO honez, non MOTA hauetako balio "
-"bat izan daitekeen."
-
-#: ../exo-helper/main.c:71
-msgid "TYPE [PARAMETER]"
-msgstr "MOTA [PARAMETROA]"
-
-#: ../exo-helper/main.c:69
-msgid "Settings manager socket"
-msgstr "Ezarpen kudeatzaile socket-a"
-
-#: ../exo-helper/main.c:69
-msgid "SOCKET ID"
-msgstr "SOCKET IDa"
-
-#: ../exo-helper/main.c:93
-msgid ""
-"The following TYPEs are supported for the --launch command:\n"
-"\n"
-"  WebBrowser       - The preferred Web Browser.\n"
-"  MailReader       - The preferred Mail Reader.\n"
-"  TerminalEmulator - The preferred Terminal Emulator."
-msgstr ""
-"Hurrengo MOTAk onartzen dira --launh komandoarekin:\n"
-"\n"
-"  WebBrowser       - Hobetsiriko web nabigatzailea.\n"
-"  MailReader       - Hobetsiriko posta bezeroa.\n"
-"  TerminalEmulator - Hobetsiriko terminal emuladorea."
-
-#: ../exo-helper/main.c:102
-#, c-format
-msgid "Type '%s --help' for usage."
-msgstr "Idatzi '%s --help' erabilerarako."
-
-#: ../exo-helper/main.c:152
-#, c-format
-msgid "Invalid helper type \"%s\""
-msgstr "\"%s\" laguntzaile mota baliogabea"
-
-#: ../exo-helper/main.c:192
-#, c-format
-msgid ""
-"%s (Xfce %s)\n"
-"\n"
-"Copyright (c) 2003-2006\n"
-"        os-cillation e.K. All rights reserved.\n"
-"\n"
-"Written by Benedikt Meurer <benny@xfce.org>.\n"
-"\n"
-"Built with Gtk+-%d.%d.%d, running Gtk+-%d.%d.%d.\n"
-"\n"
-"Please report bugs to <%s>.\n"
-msgstr ""
-"%s (Xfce %s)\n"
-"\n"
-"Copyright (c) 2003-2006\n"
-"        os-cillation e.K. All rights reserved.\n"
-"\n"
-"Benedikt Meurerek <benny@xfce.org> idatzia.\n"
-"\n"
-"Gtk+-%d.%d.%d erabiliaz eraikia,  Gtk+-%d.%d.%d erabiliaz exekutatua.\n"
-"\n"
-"Programa erroreen berri hemen eman: <%s>.\n"
-
-#: ../exo-helper/main.c:209
-#, c-format
-msgid "Unknown helper arguments.\n"
-msgstr "Laguntzaile argumentu ezezagunak.\n"
-
-#: ../exo-helper/helpers/midori.desktop.in.in.h:1
-msgid "Midori"
-msgstr "Midori"
-
-#. TRANSLATORS: The user tried to eject a device although he's not privileged to do so.
-#: ../exo-mount/exo-mount-hal.c:932
-#, c-format
-msgid "You are not privileged to teardown the crypto layer"
-msgstr "Ez duzu kriptografia geruza desmuntatzeko baimenik"
-
-#. TRANSLATORS: An application is blocking a mounted volume from being ejected.
-#: ../exo-mount/exo-mount-hal.c:937
-#, c-format
-msgid "An application is preventing the crypto layer from being torn down"
-msgstr "Aplikazio batek kriptografia geruza  desmuntatzea ezintzen du"
-
-#: ../exo-open/main.c:63
-msgid ""
-"  -V, --version                       Print version information and exit"
-msgstr ""
-"  -V, --version                       Bertsio xehetasunak bistarazi eta irten"
+#~ msgid ""
+#~ "  -v, --version                       Print version information and exit"
+#~ msgstr ""
+#~ "  -v, --version                       Bertsio xehetasunak bistarazi eta "
+#~ "irten"
