--- a/po/hu.po
+++ b/po/hu.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-11-23 16:06+0100\n"
+"POT-Creation-Date: 2009-01-10 23:57+0100\n"
 "PO-Revision-Date: 2008-12-30 07:53+0100\n"
 "Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
 "Language-Team: Hungarian\n"
@@ -38,10 +38,8 @@ msgstr "méret"
 msgid "The size of the icon to render in pixels."
 msgstr "Az ikon kirajzolási mérete pixelekben."
 
-#: ../exo/exo-gdk-pixbuf-extensions.c:770
-#: ../exo/exo-mount-point.c:208
-#: ../exo/exo-mount-point.c:237
-#: ../exo/exo-mount-point.c:425
+#: ../exo/exo-gdk-pixbuf-extensions.c:770 ../exo/exo-mount-point.c:208
+#: ../exo/exo-mount-point.c:237 ../exo/exo-mount-point.c:425
 #, c-format
 msgid "Failed to open file \"%s\": %s"
 msgstr "\"%s\" fájl megnyitása sikertelen: %s"
@@ -53,11 +51,12 @@ msgstr "\"%s\" fájl olvasása sikertelen: %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:873
 #, c-format
-msgid "Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
-msgstr "\"%s\" kép betöltése sikertelen: oka ismeretlen, talán hibás a kép fájl"
+msgid ""
+"Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
+msgstr ""
+"\"%s\" kép betöltése sikertelen: oka ismeretlen, talán hibás a kép fájl"
 
-#: ../exo/exo-icon-bar.c:249
-#: ../exo/exo-icon-view.c:785
+#: ../exo/exo-icon-bar.c:249 ../exo/exo-icon-view.c:785
 msgid "Orientation"
 msgstr "Irány"
 
@@ -65,23 +64,19 @@ msgstr "Irány"
 msgid "The orientation of the iconbar"
 msgstr "Az ikonsáv iránya"
 
-#: ../exo/exo-icon-bar.c:266
-#: ../exo/exo-icon-view.c:802
+#: ../exo/exo-icon-bar.c:266 ../exo/exo-icon-view.c:802
 msgid "Pixbuf column"
 msgstr "Kép oszlop"
 
-#: ../exo/exo-icon-bar.c:267
-#: ../exo/exo-icon-view.c:803
+#: ../exo/exo-icon-bar.c:267 ../exo/exo-icon-view.c:803
 msgid "Model column used to retrieve the icon pixbuf from"
 msgstr "Modell oszlop az ikon képek behozására innen:"
 
-#: ../exo/exo-icon-bar.c:282
-#: ../exo/exo-icon-view.c:929
+#: ../exo/exo-icon-bar.c:282 ../exo/exo-icon-view.c:929
 msgid "Text column"
 msgstr "Szöveg oszlop"
 
-#: ../exo/exo-icon-bar.c:283
-#: ../exo/exo-icon-view.c:930
+#: ../exo/exo-icon-bar.c:283 ../exo/exo-icon-view.c:930
 msgid "Model column used to retrieve the text from"
 msgstr "Modell oszlop a szövegek behozására innen:"
 
@@ -101,33 +96,27 @@ msgstr "Aktív"
 msgid "Active item index"
 msgstr "Aktív elem index"
 
-#: ../exo/exo-icon-bar.c:319
-#: ../exo/exo-icon-bar.c:320
+#: ../exo/exo-icon-bar.c:319 ../exo/exo-icon-bar.c:320
 msgid "Active item fill color"
 msgstr "Aktív elem kitöltő szín"
 
-#: ../exo/exo-icon-bar.c:326
-#: ../exo/exo-icon-bar.c:327
+#: ../exo/exo-icon-bar.c:326 ../exo/exo-icon-bar.c:327
 msgid "Active item border color"
 msgstr "Aktív elem keret szín"
 
-#: ../exo/exo-icon-bar.c:333
-#: ../exo/exo-icon-bar.c:334
+#: ../exo/exo-icon-bar.c:333 ../exo/exo-icon-bar.c:334
 msgid "Active item text color"
 msgstr "Aktív elem szöveg szín"
 
-#: ../exo/exo-icon-bar.c:340
-#: ../exo/exo-icon-bar.c:341
+#: ../exo/exo-icon-bar.c:340 ../exo/exo-icon-bar.c:341
 msgid "Cursor item fill color"
 msgstr "Kurzor elem kitöltő szín"
 
-#: ../exo/exo-icon-bar.c:347
-#: ../exo/exo-icon-bar.c:348
+#: ../exo/exo-icon-bar.c:347 ../exo/exo-icon-bar.c:348
 msgid "Cursor item border color"
 msgstr "Kurzor elem keret szín"
 
-#: ../exo/exo-icon-bar.c:354
-#: ../exo/exo-icon-bar.c:355
+#: ../exo/exo-icon-bar.c:354 ../exo/exo-icon-bar.c:355
 msgid "Cursor item text color"
 msgstr "Kurzor elem szöveg szín"
 
@@ -197,8 +186,7 @@ msgid "All Icons"
 msgstr "Minden ikon"
 
 #. EXO_ICON_CHOOSER_CONTEXT_FILE
-#: ../exo/exo-icon-chooser-dialog.c:115
-#: ../exo/exo-icon-chooser-dialog.c:262
+#: ../exo/exo-icon-chooser-dialog.c:115 ../exo/exo-icon-chooser-dialog.c:262
 msgid "Image Files"
 msgstr "Kép fájlok"
 
@@ -272,7 +260,8 @@ msgid "The model for the icon view"
 msgstr "Az ikon nézet modellje"
 
 #: ../exo/exo-icon-view.c:786
-msgid "How the text and icon of each item are positioned relative to each other"
+msgid ""
+"How the text and icon of each item are positioned relative to each other"
 msgstr "A szöveg és ikon egymáshoz való viszonya"
 
 #: ../exo/exo-icon-view.c:818
@@ -307,25 +296,25 @@ msgstr "Kijelölés mód"
 msgid "The selection mode"
 msgstr "A kijelölés módja"
 
-#: ../exo/exo-icon-view.c:880
-#: ../exo/exo-tree-view.c:166
+#: ../exo/exo-icon-view.c:880 ../exo/exo-tree-view.c:166
 msgid "Single Click"
 msgstr "Egy-kattintás"
 
-#: ../exo/exo-icon-view.c:881
-#: ../exo/exo-tree-view.c:167
+#: ../exo/exo-icon-view.c:881 ../exo/exo-tree-view.c:167
 msgid "Whether the items in the view can be activated with single clicks"
 msgstr "Az elem egy-kattintásra aktiválódjon-e a nézetben"
 
-#: ../exo/exo-icon-view.c:897
-#: ../exo/exo-tree-view.c:183
+#: ../exo/exo-icon-view.c:897 ../exo/exo-tree-view.c:183
 msgid "Single Click Timeout"
 msgstr "Egy-kattintós késleltetés"
 
-#: ../exo/exo-icon-view.c:898
-#: ../exo/exo-tree-view.c:184
-msgid "The amount of time after which the item under the mouse cursor will be selected automatically in single click mode"
-msgstr "Az idő, mely egy elem kijelöléséig tart, ha ráhúzod az egeret egy-kattintós módban"
+#: ../exo/exo-icon-view.c:898 ../exo/exo-tree-view.c:184
+msgid ""
+"The amount of time after which the item under the mouse cursor will be "
+"selected automatically in single click mode"
+msgstr ""
+"Az idő, mely egy elem kijelöléséig tart, ha ráhúzod az egeret egy-kattintós "
+"módban"
 
 #: ../exo/exo-icon-view.c:913
 msgid "Spacing"
@@ -355,8 +344,7 @@ msgstr "Jelölő doboz átlátszatlansága"
 msgid "Preview"
 msgstr "Előnézet"
 
-#: ../exo/exo-thumbnail-preview.c:139
-#: ../exo/exo-thumbnail-preview.c:281
+#: ../exo/exo-thumbnail-preview.c:139 ../exo/exo-thumbnail-preview.c:281
 msgid "No file selected"
 msgstr "Nincs kijelölt fájl"
 
@@ -385,8 +373,12 @@ msgid "_Add a new toolbar"
 msgstr "Új eszközsáv hozzá_adása"
 
 #: ../exo/exo-toolbars-editor.c:230
-msgid "Drag an item onto the toolbars above to add it, from the toolbars in the items table to remove it."
-msgstr "Húzz egy elemet az eszközsávok fölé hozzáadáshoz, és róluk az elemek táblájába eltávolításukhoz."
+msgid ""
+"Drag an item onto the toolbars above to add it, from the toolbars in the "
+"items table to remove it."
+msgstr ""
+"Húzz egy elemet az eszközsávok fölé hozzáadáshoz, és róluk az elemek "
+"táblájába eltávolításukhoz."
 
 #: ../exo/exo-toolbars-editor.c:543
 msgid "Separator"
@@ -529,10 +521,8 @@ msgstr "  --strip-comments  Eltávolítja a megjegyzéseket az XML fájlokból\n
 msgid "  --strip-content   Remove node contents from XML files\n"
 msgstr ""
 
-#: ../exo-csource/main.c:305
-#: ../exo-desktop-item-edit/main.c:153
-#: ../exo-mount/main.c:122
-#: ../exo-mount-notify/main.c:167
+#: ../exo-csource/main.c:305 ../exo-desktop-item-edit/main.c:153
+#: ../exo-mount/main.c:122 ../exo-mount-notify/main.c:169
 #: ../exo-open/main.c:129
 #, c-format
 msgid ""
@@ -548,10 +538,8 @@ msgstr ""
 "Írta Benedikt Meurer <benny@xfce.org>.\n"
 "\n"
 
-#: ../exo-csource/main.c:309
-#: ../exo-desktop-item-edit/main.c:157
-#: ../exo-mount/main.c:126
-#: ../exo-mount-notify/main.c:171
+#: ../exo-csource/main.c:309 ../exo-desktop-item-edit/main.c:157
+#: ../exo-mount/main.c:126 ../exo-mount-notify/main.c:173
 #: ../exo-open/main.c:133
 #, c-format
 msgid ""
@@ -567,10 +555,8 @@ msgstr ""
 "%s forrás csomagban lelsz.\n"
 "\n"
 
-#: ../exo-csource/main.c:313
-#: ../exo-desktop-item-edit/main.c:161
-#: ../exo-mount/main.c:130
-#: ../exo-mount-notify/main.c:175
+#: ../exo-csource/main.c:313 ../exo-desktop-item-edit/main.c:161
+#: ../exo-mount/main.c:130 ../exo-mount-notify/main.c:177
 #: ../exo-open/main.c:137
 #, c-format
 msgid "Please report bugs to <%s>.\n"
@@ -660,8 +646,14 @@ msgid "Use _startup notification"
 msgstr "Indítás jelenté_s használata"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:431
-msgid "Select this option to enable startup notification when the command is run from the file manager or the menu. Not every application supports startup notification."
-msgstr "Válaszd e lehetőséget az indítás jelentés bekapcsolásához a parancs indításakor a fájlkezelőből vagy a menüből. Nem minden alkalmazás támogatja ezt."
+msgid ""
+"Select this option to enable startup notification when the command is run "
+"from the file manager or the menu. Not every application supports startup "
+"notification."
+msgstr ""
+"Válaszd e lehetőséget az indítás jelentés bekapcsolásához a parancs "
+"indításakor a fájlkezelőből vagy a menüből. Nem minden alkalmazás támogatja "
+"ezt."
 
 #. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #. *              and sync your translations with the translations in Thunar and xfce4-panel.
@@ -724,10 +716,8 @@ msgstr "URL azonnal egy lánc létrehozásakor"
 msgid "Preset icon when creating a desktop file"
 msgstr "Ikon azonnal egy asztali fájl létrehozásakor"
 
-#: ../exo-desktop-item-edit/main.c:79
-#: ../exo-helper/main.c:67
-#: ../exo-mount/main.c:74
-#: ../exo-mount-notify/main.c:77
+#: ../exo-desktop-item-edit/main.c:79 ../exo-helper/main.c:67
+#: ../exo-mount/main.c:74 ../exo-mount-notify/main.c:77
 msgid "Print version information and exit"
 msgstr "Kiírja a verzió információt és kilép"
 
@@ -736,9 +726,8 @@ msgstr "Kiírja a verzió információt és kilép"
 msgid "[FILE|FOLDER]"
 msgstr "[FÁJL|MAPPA]"
 
-#: ../exo-desktop-item-edit/main.c:138
-#: ../exo-mount/main.c:108
-#: ../exo-mount-notify/main.c:153
+#: ../exo-desktop-item-edit/main.c:138 ../exo-mount/main.c:108
+#: ../exo-mount-notify/main.c:155
 msgid "Failed to open display"
 msgstr "Kijelző megnyitása sikertelen"
 
@@ -1071,11 +1060,13 @@ msgstr ""
 msgid "SOCKET ID"
 msgstr ""
 
-#: ../exo-helper/main.c:71
-msgid "Launch the default helper of TYPE with the optional PARAMETER, where TYPE is one of the following values."
+#: ../exo-helper/main.c:70
+msgid ""
+"Launch the default helper of TYPE with the optional PARAMETER, where TYPE is "
+"one of the following values."
 msgstr ""
 
-#: ../exo-helper/main.c:71
+#: ../exo-helper/main.c:70
 msgid "TYPE [PARAMETER]"
 msgstr "TÍPUS [PARAMÉTER]"
 
@@ -1260,15 +1251,13 @@ msgstr "Ismeretlen hiba"
 
 #. TRANSLATORS: a device is missing from the file system table (usually /etc/fstab)
 #. tell the caller that no matching device was found
-#: ../exo-mount/exo-mount-fstab.c:132
-#: ../exo-mount/exo-mount-hal.c:374
+#: ../exo-mount/exo-mount-fstab.c:132 ../exo-mount/exo-mount-hal.c:374
 #, c-format
 msgid "Device \"%s\" not found in file system device table"
 msgstr "\"%s\" eszköz nincs a fájlrendszer eszköz táblában"
 
 #. definitely not a device that we're able to mount, eject or unmount
-#: ../exo-mount/exo-mount-hal.c:224
-#: ../exo-mount/exo-mount-hal.c:280
+#: ../exo-mount/exo-mount-hal.c:224 ../exo-mount/exo-mount-hal.c:280
 #, c-format
 msgid "Given device \"%s\" is not a volume or drive"
 msgstr "\"%s\" nem egy kötet vagy meghajtó"
@@ -1293,13 +1282,19 @@ msgstr "Nincs jogod \"%s\" kötet csatolásához"
 
 #: ../exo-mount/exo-mount-hal.c:856
 #, c-format
-msgid "Blank discs cannot be mounted, use a CD recording application like Xfburn to record audio or data on the disc"
-msgstr "Üres lemezek nem csatolhatók, használj egy CD író alkalmazást, mint például az Xfburn hang vagy adat íráshoz a lemezre"
+msgid ""
+"Blank discs cannot be mounted, use a CD recording application like Xfburn to "
+"record audio or data on the disc"
+msgstr ""
+"Üres lemezek nem csatolhatók, használj egy CD író alkalmazást, mint például "
+"az Xfburn hang vagy adat íráshoz a lemezre"
 
 #: ../exo-mount/exo-mount-hal.c:867
 #, c-format
 msgid "Audio CDs cannot be mounted, use Xfmedia to play the audio tracks"
-msgstr "Hang CD-k nem csatolhatók, használd az Xfmedia programot hang sávok lejátszására"
+msgstr ""
+"Hang CD-k nem csatolhatók, használd az Xfmedia programot hang sávok "
+"lejátszására"
 
 #. TRANSLATORS: The user tried to eject a device although he's not privileged to do so.
 #: ../exo-mount/exo-mount-hal.c:932
@@ -1366,7 +1361,9 @@ msgid "Must not specify both a HAL device UDI and a device file simultaneously"
 msgstr "Nem lehet HAL eszköz UDI és egy eszköz-fájl egyszerre"
 
 #: ../exo-mount/main.c:154
-msgid "Cannot mount by HAL device UDI, because HAL support was disabled for this build"
+msgid ""
+"Cannot mount by HAL device UDI, because HAL support was disabled for this "
+"build"
 msgstr "Nem csatolható HAL eszköz UDI által, mert a HAL támogatás mellőzött"
 
 #: ../exo-mount/main.c:161
@@ -1395,44 +1392,52 @@ msgid "Failed to mount \"%s\""
 msgstr "\"%s\" csatolása sikertelen"
 
 #. tell the user that the device can be removed now
-#: ../exo-mount-notify/main.c:111
+#: ../exo-mount-notify/main.c:113
 #, c-format
 msgid "The device \"%s\" is now safe to remove."
 msgstr "\"%s\" eszköz biztonsággal eltávolítható."
 
-#: ../exo-mount-notify/main.c:112
+#: ../exo-mount-notify/main.c:114
 msgid "Device is now safe to remove"
 msgstr "Az eszköz most biztonsággal eltávolítható"
 
 #. read-only, just ejecting
-#: ../exo-mount-notify/main.c:224
+#: ../exo-mount-notify/main.c:226
 msgid "Ejecting device"
 msgstr "Eszköz kiadása"
 
-#: ../exo-mount-notify/main.c:225
+#: ../exo-mount-notify/main.c:227
 #, c-format
 msgid "The device \"%s\" is being ejected. This may take some time."
 msgstr "\"%s\" eszköz kiadásra kerül. Kis türelem..."
 
 #. read-only, just unmounting
-#: ../exo-mount-notify/main.c:230
+#: ../exo-mount-notify/main.c:232
 msgid "Unmounting device"
 msgstr "Eszköz lecsatolása"
 
-#: ../exo-mount-notify/main.c:231
+#: ../exo-mount-notify/main.c:233
 #, c-format
-msgid "The device \"%s\" is being unmounted by the system. Please do not remove the media or disconnect the drive."
-msgstr "\"%s\" eszközt lecsatolja a rendszer. Ne távolítsd el addig a médiát vagy válaszd le a meghajtót."
+msgid ""
+"The device \"%s\" is being unmounted by the system. Please do not remove the "
+"media or disconnect the drive."
+msgstr ""
+"\"%s\" eszközt lecsatolja a rendszer. Ne távolítsd el addig a médiát vagy "
+"válaszd le a meghajtót."
 
 #. not read-only, writing back data
-#: ../exo-mount-notify/main.c:238
+#: ../exo-mount-notify/main.c:240
 msgid "Writing data to device"
 msgstr "Adat írása az eszközre"
 
-#: ../exo-mount-notify/main.c:239
+#: ../exo-mount-notify/main.c:241
 #, c-format
-msgid "There is data that needs to be written to the device \"%s\" before it can be removed. Please do not remove the media or disconnect the drive."
-msgstr "Eltávolítás előtt adatokat kell írni ezen eszközre: \"%s\". Ne távolítsd el a médiát vagy válaszd le a meghajtót."
+msgid ""
+"There is data that needs to be written to the device \"%s\" before it can be "
+"removed. Please do not remove the media or disconnect the drive."
+msgstr ""
+"Eltávolítás előtt adatokat kell írni ezen eszközre: \"%s\". Ne távolítsd el "
+"a médiát vagy válaszd le a meghajtót."
 
 #: ../exo-open/main.c:59
 msgid "Usage: exo-open [URLs...]"
@@ -1447,22 +1452,27 @@ msgid "  -?, --help                          Print this help message and exit"
 msgstr "  -?, --help                          Kiírja e súgót és kilép"
 
 #: ../exo-open/main.c:63
-msgid "  -V, --version                       Print version information and exit"
-msgstr "  -V, --version                       Kiírja a verzió információt és kilép"
+msgid ""
+"  -V, --version                       Print version information and exit"
+msgstr ""
+"  -V, --version                       Kiírja a verzió információt és kilép"
 
 #: ../exo-open/main.c:65
 msgid ""
 "  --launch TYPE [PARAMETERs...]       Launch the preferred application of\n"
-"                                      TYPE with the optional PARAMETERs, where\n"
+"                                      TYPE with the optional PARAMETERs, "
+"where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
-"  --launch TÍPUS [PARAMÉTERek...]     A TÍPUShoz társított alkalmazást futtatja\n"
+"  --launch TÍPUS [PARAMÉTERek...]     A TÍPUShoz társított alkalmazást "
+"futtatja\n"
 "                                      lehetséges PARAMÉTERekkel, ahol a\n"
 "                                      TÍPUS az alábbiak egyike."
 
 #: ../exo-open/main.c:69
 msgid ""
-"  --working-directory DIRECTORY       Default working directory for applications\n"
+"  --working-directory DIRECTORY       Default working directory for "
+"applications\n"
 "                                      when using the --launch option."
 msgstr ""
 "  --working-directory KÖNYVTÁR        Az alkalmazások alap munkakönyvtára\n"
@@ -1511,14 +1521,18 @@ msgstr "\"%s\" URL megnyitása sikertelen"
 
 #~ msgid "Xfce 4 Preferred Applications"
 #~ msgstr "Xfce 4 Kedvenc alkalmazások"
+
 #~ msgid "Failed to launch exo-preferred-applications"
 #~ msgstr "exo-preferred-applications futtatása sikertelen"
+
 #~ msgid "Button Label|Preferred Applications"
 #~ msgstr "Kedvenc alkalmazások"
+
 #~ msgid "Sylpheed Claws"
 #~ msgstr "Sylpheed Claws"
+
 #~ msgid "Failed to open display: %s"
 #~ msgstr "Kijelző megnyitása sikertelen: %s"
+
 #~ msgid "Select an Icon"
 #~ msgstr "Válassz ikont"
-
