--- a/po/sv.po
+++ b/po/sv.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: libexo\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-12-09 01:09+0100\n"
+"POT-Creation-Date: 2009-01-10 23:57+0100\n"
 "PO-Revision-Date: 2008-12-09 01:13+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
@@ -43,10 +43,8 @@ msgstr "storlek"
 msgid "The size of the icon to render in pixels."
 msgstr "Storleken för ikonen att rita ut, i bildpunkter."
 
-#: ../exo/exo-gdk-pixbuf-extensions.c:770
-#: ../exo/exo-mount-point.c:208
-#: ../exo/exo-mount-point.c:237
-#: ../exo/exo-mount-point.c:425
+#: ../exo/exo-gdk-pixbuf-extensions.c:770 ../exo/exo-mount-point.c:208
+#: ../exo/exo-mount-point.c:237 ../exo/exo-mount-point.c:425
 #, c-format
 msgid "Failed to open file \"%s\": %s"
 msgstr "Misslyckades med att öppna filen \"%s\": %s"
@@ -58,11 +56,13 @@ msgstr "Misslyckades med att läsa filen \"%s\": %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:873
 #, c-format
-msgid "Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
-msgstr "Misslyckades med att läsa in bilden \"%s\": Okänd anledning, antagligen en skadad bildfil"
+msgid ""
+"Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
+msgstr ""
+"Misslyckades med att läsa in bilden \"%s\": Okänd anledning, antagligen en "
+"skadad bildfil"
 
-#: ../exo/exo-icon-bar.c:249
-#: ../exo/exo-icon-view.c:785
+#: ../exo/exo-icon-bar.c:249 ../exo/exo-icon-view.c:785
 msgid "Orientation"
 msgstr "Orientering"
 
@@ -70,23 +70,19 @@ msgstr "Orientering"
 msgid "The orientation of the iconbar"
 msgstr "Orienteringen för ikonraden"
 
-#: ../exo/exo-icon-bar.c:266
-#: ../exo/exo-icon-view.c:802
+#: ../exo/exo-icon-bar.c:266 ../exo/exo-icon-view.c:802
 msgid "Pixbuf column"
 msgstr "Pixbuf-kolumn"
 
-#: ../exo/exo-icon-bar.c:267
-#: ../exo/exo-icon-view.c:803
+#: ../exo/exo-icon-bar.c:267 ../exo/exo-icon-view.c:803
 msgid "Model column used to retrieve the icon pixbuf from"
 msgstr "Modellkolumn som används för att hämta ikonens pixbuf från"
 
-#: ../exo/exo-icon-bar.c:282
-#: ../exo/exo-icon-view.c:929
+#: ../exo/exo-icon-bar.c:282 ../exo/exo-icon-view.c:929
 msgid "Text column"
 msgstr "Textkolumn"
 
-#: ../exo/exo-icon-bar.c:283
-#: ../exo/exo-icon-view.c:930
+#: ../exo/exo-icon-bar.c:283 ../exo/exo-icon-view.c:930
 msgid "Model column used to retrieve the text from"
 msgstr "Modellkolumn som används för att hämta texten från"
 
@@ -106,33 +102,27 @@ msgstr "Aktiv"
 msgid "Active item index"
 msgstr "Index för aktiva objekt"
 
-#: ../exo/exo-icon-bar.c:319
-#: ../exo/exo-icon-bar.c:320
+#: ../exo/exo-icon-bar.c:319 ../exo/exo-icon-bar.c:320
 msgid "Active item fill color"
 msgstr "Fyllnadsfärg för aktivt objekt"
 
-#: ../exo/exo-icon-bar.c:326
-#: ../exo/exo-icon-bar.c:327
+#: ../exo/exo-icon-bar.c:326 ../exo/exo-icon-bar.c:327
 msgid "Active item border color"
 msgstr "Kantfärg för aktivt objekt"
 
-#: ../exo/exo-icon-bar.c:333
-#: ../exo/exo-icon-bar.c:334
+#: ../exo/exo-icon-bar.c:333 ../exo/exo-icon-bar.c:334
 msgid "Active item text color"
 msgstr "Textfärg för aktivt objekt"
 
-#: ../exo/exo-icon-bar.c:340
-#: ../exo/exo-icon-bar.c:341
+#: ../exo/exo-icon-bar.c:340 ../exo/exo-icon-bar.c:341
 msgid "Cursor item fill color"
 msgstr "Fyllnadsfärg för markörobjekt"
 
-#: ../exo/exo-icon-bar.c:347
-#: ../exo/exo-icon-bar.c:348
+#: ../exo/exo-icon-bar.c:347 ../exo/exo-icon-bar.c:348
 msgid "Cursor item border color"
 msgstr "Kantfärg för markörobjekt"
 
-#: ../exo/exo-icon-bar.c:354
-#: ../exo/exo-icon-bar.c:355
+#: ../exo/exo-icon-bar.c:354 ../exo/exo-icon-bar.c:355
 msgid "Cursor item text color"
 msgstr "Textfärg för markörobjekt"
 
@@ -202,8 +192,7 @@ msgid "All Icons"
 msgstr "Alla ikoner"
 
 #. EXO_ICON_CHOOSER_CONTEXT_FILE
-#: ../exo/exo-icon-chooser-dialog.c:115
-#: ../exo/exo-icon-chooser-dialog.c:262
+#: ../exo/exo-icon-chooser-dialog.c:115 ../exo/exo-icon-chooser-dialog.c:262
 msgid "Image Files"
 msgstr "Bildfiler"
 
@@ -277,7 +266,8 @@ msgid "The model for the icon view"
 msgstr "Modellen för ikonvyn"
 
 #: ../exo/exo-icon-view.c:786
-msgid "How the text and icon of each item are positioned relative to each other"
+msgid ""
+"How the text and icon of each item are positioned relative to each other"
 msgstr "Hur texten och ikonen i varje objekt placeras relativt till varandra"
 
 #: ../exo/exo-icon-view.c:818
@@ -312,25 +302,25 @@ msgstr "Markeringsläge"
 msgid "The selection mode"
 msgstr "Markeringsläget"
 
-#: ../exo/exo-icon-view.c:880
-#: ../exo/exo-tree-view.c:166
+#: ../exo/exo-icon-view.c:880 ../exo/exo-tree-view.c:166
 msgid "Single Click"
 msgstr "Enkelklick"
 
-#: ../exo/exo-icon-view.c:881
-#: ../exo/exo-tree-view.c:167
+#: ../exo/exo-icon-view.c:881 ../exo/exo-tree-view.c:167
 msgid "Whether the items in the view can be activated with single clicks"
 msgstr "Huruvida objekten i vyn kan aktiveras med enkelklick"
 
-#: ../exo/exo-icon-view.c:897
-#: ../exo/exo-tree-view.c:183
+#: ../exo/exo-icon-view.c:897 ../exo/exo-tree-view.c:183
 msgid "Single Click Timeout"
 msgstr "Tidsgräns för enkelklick"
 
-#: ../exo/exo-icon-view.c:898
-#: ../exo/exo-tree-view.c:184
-msgid "The amount of time after which the item under the mouse cursor will be selected automatically in single click mode"
-msgstr "Tiden det tar innan objektet som är under muspekaren automatiskt kommer att väljas i enkelklicksläge"
+#: ../exo/exo-icon-view.c:898 ../exo/exo-tree-view.c:184
+msgid ""
+"The amount of time after which the item under the mouse cursor will be "
+"selected automatically in single click mode"
+msgstr ""
+"Tiden det tar innan objektet som är under muspekaren automatiskt kommer att "
+"väljas i enkelklicksläge"
 
 #: ../exo/exo-icon-view.c:913
 msgid "Spacing"
@@ -360,8 +350,7 @@ msgstr "Opakhet för markeringsrutan"
 msgid "Preview"
 msgstr "Förhandsvisning"
 
-#: ../exo/exo-thumbnail-preview.c:139
-#: ../exo/exo-thumbnail-preview.c:281
+#: ../exo/exo-thumbnail-preview.c:139 ../exo/exo-thumbnail-preview.c:281
 msgid "No file selected"
 msgstr "Ingen fil vald"
 
@@ -390,8 +379,12 @@ msgid "_Add a new toolbar"
 msgstr "_Lägg till en ny verktygsrad"
 
 #: ../exo/exo-toolbars-editor.c:230
-msgid "Drag an item onto the toolbars above to add it, from the toolbars in the items table to remove it."
-msgstr "Dra ett objekt till verktygsraderna ovan för att lägga till det, från verktygsraderna till objekttabellen för att ta bort det."
+msgid ""
+"Drag an item onto the toolbars above to add it, from the toolbars in the "
+"items table to remove it."
+msgstr ""
+"Dra ett objekt till verktygsraderna ovan för att lägga till det, från "
+"verktygsraderna till objekttabellen för att ta bort det."
 
 #: ../exo/exo-toolbars-editor.c:543
 msgid "Separator"
@@ -534,10 +527,8 @@ msgstr "  --strip-comments Ta bort kommentarer från XML-filer\n"
 msgid "  --strip-content   Remove node contents from XML files\n"
 msgstr "  --strip-content Ta bort nodinnehåll från XML-filer\n"
 
-#: ../exo-csource/main.c:305
-#: ../exo-desktop-item-edit/main.c:153
-#: ../exo-mount/main.c:122
-#: ../exo-mount-notify/main.c:169
+#: ../exo-csource/main.c:305 ../exo-desktop-item-edit/main.c:153
+#: ../exo-mount/main.c:122 ../exo-mount-notify/main.c:169
 #: ../exo-open/main.c:129
 #, c-format
 msgid ""
@@ -553,10 +544,8 @@ msgstr ""
 "Skrivet av Benedikt Meurer <benny@xfce.org>.\n"
 "\n"
 
-#: ../exo-csource/main.c:309
-#: ../exo-desktop-item-edit/main.c:157
-#: ../exo-mount/main.c:126
-#: ../exo-mount-notify/main.c:173
+#: ../exo-csource/main.c:309 ../exo-desktop-item-edit/main.c:157
+#: ../exo-mount/main.c:126 ../exo-mount-notify/main.c:173
 #: ../exo-open/main.c:133
 #, c-format
 msgid ""
@@ -572,10 +561,8 @@ msgstr ""
 "källkodspaketet för %s.\n"
 "\n"
 
-#: ../exo-csource/main.c:313
-#: ../exo-desktop-item-edit/main.c:161
-#: ../exo-mount/main.c:130
-#: ../exo-mount-notify/main.c:177
+#: ../exo-csource/main.c:313 ../exo-desktop-item-edit/main.c:161
+#: ../exo-mount/main.c:130 ../exo-mount-notify/main.c:177
 #: ../exo-open/main.c:137
 #, c-format
 msgid "Please report bugs to <%s>.\n"
@@ -665,8 +652,14 @@ msgid "Use _startup notification"
 msgstr "Använd upp_startsnotifiering"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:431
-msgid "Select this option to enable startup notification when the command is run from the file manager or the menu. Not every application supports startup notification."
-msgstr "Välj det här alternativet för att aktivera uppstartsnotifiering när kommandot körs från filhanteraren eller menyn. Inte alla program har stöd för uppstartsnotifiering."
+msgid ""
+"Select this option to enable startup notification when the command is run "
+"from the file manager or the menu. Not every application supports startup "
+"notification."
+msgstr ""
+"Välj det här alternativet för att aktivera uppstartsnotifiering när "
+"kommandot körs från filhanteraren eller menyn. Inte alla program har stöd "
+"för uppstartsnotifiering."
 
 #. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #. *              and sync your translations with the translations in Thunar and xfce4-panel.
@@ -677,7 +670,8 @@ msgstr "Kör i _terminal"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:444
 msgid "Select this option to run the command in a terminal window."
-msgstr "Välj det här alternativet för att köra kommandot i ett terminalfönster."
+msgstr ""
+"Välj det här alternativet för att köra kommandot i ett terminalfönster."
 
 #. allocate the icon chooser dialog
 #: ../exo-desktop-item-edit/exo-die-editor.c:591
@@ -729,10 +723,8 @@ msgstr "Standard-URL för nya länkar"
 msgid "Preset icon when creating a desktop file"
 msgstr "Standardikon för ny skrivbordsfil"
 
-#: ../exo-desktop-item-edit/main.c:79
-#: ../exo-helper/main.c:67
-#: ../exo-mount/main.c:74
-#: ../exo-mount-notify/main.c:77
+#: ../exo-desktop-item-edit/main.c:79 ../exo-helper/main.c:67
+#: ../exo-mount/main.c:74 ../exo-mount-notify/main.c:77
 msgid "Print version information and exit"
 msgstr "Skriv ut versionsinformation och avsluta"
 
@@ -741,8 +733,7 @@ msgstr "Skriv ut versionsinformation och avsluta"
 msgid "[FILE|FOLDER]"
 msgstr "[FIL|MAPP]"
 
-#: ../exo-desktop-item-edit/main.c:138
-#: ../exo-mount/main.c:108
+#: ../exo-desktop-item-edit/main.c:138 ../exo-mount/main.c:108
 #: ../exo-mount-notify/main.c:155
 msgid "Failed to open display"
 msgstr "Misslyckades med att öppna display"
@@ -1079,8 +1070,12 @@ msgid "SOCKET ID"
 msgstr "UTTAGS-ID"
 
 #: ../exo-helper/main.c:70
-msgid "Launch the default helper of TYPE with the optional PARAMETER, where TYPE is one of the following values."
-msgstr "Kör standardhjälparen för TYP med frivilliga PARAMETRAR, där TYP är ett av följande värden."
+msgid ""
+"Launch the default helper of TYPE with the optional PARAMETER, where TYPE is "
+"one of the following values."
+msgstr ""
+"Kör standardhjälparen för TYP med frivilliga PARAMETRAR, där TYP är ett av "
+"följande värden."
 
 #: ../exo-helper/main.c:70
 msgid "TYPE [PARAMETER]"
@@ -1268,15 +1263,13 @@ msgstr "Okänt fel"
 
 #. TRANSLATORS: a device is missing from the file system table (usually /etc/fstab)
 #. tell the caller that no matching device was found
-#: ../exo-mount/exo-mount-fstab.c:132
-#: ../exo-mount/exo-mount-hal.c:374
+#: ../exo-mount/exo-mount-fstab.c:132 ../exo-mount/exo-mount-hal.c:374
 #, c-format
 msgid "Device \"%s\" not found in file system device table"
 msgstr "Enheten \"%s\" hittades inte i filsystemets enhetstabell"
 
 #. definitely not a device that we're able to mount, eject or unmount
-#: ../exo-mount/exo-mount-hal.c:224
-#: ../exo-mount/exo-mount-hal.c:280
+#: ../exo-mount/exo-mount-hal.c:224 ../exo-mount/exo-mount-hal.c:280
 #, c-format
 msgid "Given device \"%s\" is not a volume or drive"
 msgstr "Enheten \"%s\" är inte en volym eller enhet"
@@ -1301,13 +1294,18 @@ msgstr "Du har inte behörighet att montera volymen \"%s\""
 
 #: ../exo-mount/exo-mount-hal.c:856
 #, c-format
-msgid "Blank discs cannot be mounted, use a CD recording application like Xfburn to record audio or data on the disc"
-msgstr "Tomma skivor kan inte monteras, använd ett cd-bränningsprogram som Xfburn för att skriva ljud eller data på skivan"
+msgid ""
+"Blank discs cannot be mounted, use a CD recording application like Xfburn to "
+"record audio or data on the disc"
+msgstr ""
+"Tomma skivor kan inte monteras, använd ett cd-bränningsprogram som Xfburn "
+"för att skriva ljud eller data på skivan"
 
 #: ../exo-mount/exo-mount-hal.c:867
 #, c-format
 msgid "Audio CDs cannot be mounted, use Xfmedia to play the audio tracks"
-msgstr "Ljud-cd-skivor kan inte monteras, använd Xfmedia för att spela ljudspåren"
+msgstr ""
+"Ljud-cd-skivor kan inte monteras, använd Xfmedia för att spela ljudspåren"
 
 #. TRANSLATORS: The user tried to eject a device although he's not privileged to do so.
 #: ../exo-mount/exo-mount-hal.c:932
@@ -1374,8 +1372,12 @@ msgid "Must not specify both a HAL device UDI and a device file simultaneously"
 msgstr "Får inte ange både en HAL enhets-UDI och en enhetsfil på samma gång"
 
 #: ../exo-mount/main.c:154
-msgid "Cannot mount by HAL device UDI, because HAL support was disabled for this build"
-msgstr "Kan inte montera efter HAL enhets-UDI, eftersom stöd för HAL blev inaktiverad för detta bygge"
+msgid ""
+"Cannot mount by HAL device UDI, because HAL support was disabled for this "
+"build"
+msgstr ""
+"Kan inte montera efter HAL enhets-UDI, eftersom stöd för HAL blev "
+"inaktiverad för detta bygge"
 
 #: ../exo-mount/main.c:161
 #, c-format
@@ -1429,8 +1431,12 @@ msgstr "Avmonterar enhet"
 
 #: ../exo-mount-notify/main.c:233
 #, c-format
-msgid "The device \"%s\" is being unmounted by the system. Please do not remove the media or disconnect the drive."
-msgstr "Enheten \"%s\" håller på att avmonteras av systemet. Koppla inte från enheten eller ta ur lagringsmediet."
+msgid ""
+"The device \"%s\" is being unmounted by the system. Please do not remove the "
+"media or disconnect the drive."
+msgstr ""
+"Enheten \"%s\" håller på att avmonteras av systemet. Koppla inte från "
+"enheten eller ta ur lagringsmediet."
 
 #. not read-only, writing back data
 #: ../exo-mount-notify/main.c:240
@@ -1439,8 +1445,12 @@ msgstr "Skriver data till enhet"
 
 #: ../exo-mount-notify/main.c:241
 #, c-format
-msgid "There is data that needs to be written to the device \"%s\" before it can be removed. Please do not remove the media or disconnect the drive."
-msgstr "Det finns data som behöver skrivas till enheten \"%s\" innan den kan kopplas från. Koppla inte från enheten eller ta ur lagringsmediet."
+msgid ""
+"There is data that needs to be written to the device \"%s\" before it can be "
+"removed. Please do not remove the media or disconnect the drive."
+msgstr ""
+"Det finns data som behöver skrivas till enheten \"%s\" innan den kan kopplas "
+"från. Koppla inte från enheten eller ta ur lagringsmediet."
 
 #: ../exo-open/main.c:59
 msgid "Usage: exo-open [URLs...]"
@@ -1452,16 +1462,22 @@ msgstr "       exo-open --launch TYP [PARAMETRAR...]"
 
 #: ../exo-open/main.c:62
 msgid "  -?, --help                          Print this help message and exit"
-msgstr "  -?, --help                          Skriv ut det här hjälpmeddelandet och avsluta"
+msgstr ""
+"  -?, --help                          Skriv ut det här hjälpmeddelandet och "
+"avsluta"
 
 #: ../exo-open/main.c:63
-msgid "  -V, --version                       Print version information and exit"
-msgstr "  -V, --version                       Skriv ut versionsinformation och avsluta"
+msgid ""
+"  -V, --version                       Print version information and exit"
+msgstr ""
+"  -V, --version                       Skriv ut versionsinformation och "
+"avsluta"
 
 #: ../exo-open/main.c:65
 msgid ""
 "  --launch TYPE [PARAMETERs...]       Launch the preferred application of\n"
-"                                      TYPE with the optional PARAMETERs, where\n"
+"                                      TYPE with the optional PARAMETERs, "
+"where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
 "  --launch TYP [PARAMETRAR...]        Kör det föredragna programmet för TYP\n"
@@ -1470,7 +1486,8 @@ msgstr ""
 
 #: ../exo-open/main.c:69
 msgid ""
-"  --working-directory DIRECTORY       Default working directory for applications\n"
+"  --working-directory DIRECTORY       Default working directory for "
+"applications\n"
 "                                      when using the --launch option."
 msgstr ""
 "  --working-directory KATALOG         Standardarbetskatalog för program\n"
@@ -1503,14 +1520,16 @@ msgid ""
 msgstr ""
 "Om du inte anger --launch kommer exo-open öppna alla angivna URL:er med\n"
 "deras föredragna URL-hanterare. Annars, om du anger --launch, kan du välja\n"
-"vilken av de föredragna programmen du vill köra, och de kan ge extra parametrar\n"
+"vilken av de föredragna programmen du vill köra, och de kan ge extra "
+"parametrar\n"
 "till program (t.ex. kan du ange kommandot som ska köras i terminalen\n"
 "med TerminalEmulator)."
 
 #: ../exo-open/main.c:149
 #, c-format
 msgid "Failed to launch preferred application for category \"%s\"."
-msgstr "Misslyckades med att starta det föredragna programmet för kategorin \"%s\"."
+msgstr ""
+"Misslyckades med att starta det föredragna programmet för kategorin \"%s\"."
 
 #: ../exo-open/main.c:170
 #, c-format
@@ -1519,17 +1538,20 @@ msgstr "Misslyckades med att öppna URL:en \"%s\"."
 
 #~ msgid "Failed to launch exo-preferred-applications"
 #~ msgstr "Misslyckades med att starta exo-preferred-applications"
+
 #~ msgid "Button Label|Preferred Applications"
 #~ msgstr "Föredragna program"
+
 #~ msgid "Usage: exo-helper [OPTION...]"
 #~ msgstr "Användning: exo-helper [FLAGGA...]"
+
 #~ msgid ""
 #~ "  -h, --help                          Print this help message and exit"
 #~ msgstr "  -h, --help Skriv ut det här hjälpmeddelandet och avsluta"
+
 #~ msgid ""
 #~ "  --configure                         Open the Preferred Applications\n"
 #~ "                                      configuration dialog"
 #~ msgstr ""
 #~ "  --configure Öppna konfigurationsdialogrutan\n"
 #~ "                                      för föredragna program"
-
