Translations updates - ca es ja
(Old svn revision: 29184)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-11  Maximilian Schleiss <maximilian@xfce.org>
+
+	* es.po: Spanish translation update (Abel Martín)
+
 2009-01-10	Jannis Pohlmann <jannis@xfce.org>
 
 	* libexo-0.3.pot, *.pot: Update translation files just to make sure 
@@ -21,7 +25,7 @@
 
 2008-12-07  Piarres Beobide <pi@beobide.net>
 
-        * eu.po: Basque translation update
+	* eu.po: Basque translation update
 
 2008-11-30  Maximilian Schleiss <maximilian@xfce.org>
 
