--- a/po/es.po
+++ b/po/es.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-10 23:57+0100\n"
-"PO-Revision-Date: 2008-11-29 12:42+0100\n"
+"PO-Revision-Date: 2008-12-16 21:22+0100\n"
 "Last-Translator: Abel Martín <abel.martin.ruiz@gmail.com>\n"
 "Language-Team: Spanish/ES <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
@@ -867,7 +867,7 @@ msgstr "Aplicaciones favoritas"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:104
 msgid "Select default applications for various services"
-msgstr "Seleccione aplicaciones por defecto para varios servicios"
+msgstr "Seleccione aplicaciones predeterminadas para varios servicios"
 
 #.
 #. Internet
@@ -942,15 +942,15 @@ msgstr "Ninguna aplicación seleccionada"
 
 #: ../exo-helper/exo-helper-chooser.c:350
 msgid "Failed to set default Web Browser"
-msgstr "Fallo al establecer el navegador web por defecto"
+msgstr "Fallo al establecer el navegador web predeterminado"
 
 #: ../exo-helper/exo-helper-chooser.c:351
 msgid "Failed to set default Mail Reader"
-msgstr "Fallo al establecer el lector de correo por defecto"
+msgstr "Fallo al establecer el lector de correo predeterminado"
 
 #: ../exo-helper/exo-helper-chooser.c:352
 msgid "Failed to set default Terminal Emulator"
-msgstr "Fallo al establecer el emulador de terminal por defecto"
+msgstr "Fallo al establecer el emulador de terminal predeterminado"
 
 #. allocate the chooser
 #: ../exo-helper/exo-helper-chooser.c:422
@@ -1053,15 +1053,15 @@ msgstr ""
 
 #: ../exo-helper/main.c:42
 msgid "Failed to execute default Web Browser"
-msgstr "Fallo al ejecutar el navegador web por defecto"
+msgstr "Fallo al ejecutar el navegador web predeterminado"
 
 #: ../exo-helper/main.c:43
 msgid "Failed to execute default Mail Reader"
-msgstr "Fallo al ejecutar el lector de correo por defecto"
+msgstr "Fallo al ejecutar el lector de correo predeterminado"
 
 #: ../exo-helper/main.c:44
 msgid "Failed to execute default Terminal Emulator"
-msgstr "Fallo al ejecutar el emulador de terminal por defecto"
+msgstr "Fallo al ejecutar el emulador de terminal predeterminado"
 
 #: ../exo-helper/main.c:68
 msgid ""
