Translations updates - es et fr ja zh_CN
(Old svn revision: 29272)

--- a/po/es.po
+++ b/po/es.po
@@ -863,7 +863,7 @@ msgstr "Dispositivo %s"
 #: ../exo-helper/exo-helper-chooser-dialog.c:103
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:1
 msgid "Preferred Applications"
-msgstr "Aplicaciones favoritas"
+msgstr "Aplicaciones preferidas"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:104
 msgid "Select default applications for various services"
@@ -885,7 +885,7 @@ msgid ""
 "The preferred Web Browser will be used to open\n"
 "hyperlinks and display help contents."
 msgstr ""
-"El navegador web favorito se usará para abrir\n"
+"El navegador web preferido se usará para abrir\n"
 "hiperenlaces y mostrar contenidos de ayuda."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:178
@@ -897,7 +897,7 @@ msgid ""
 "The preferred Mail Reader will be used to compose\n"
 "emails when you click on email addresses."
 msgstr ""
-"El lector de correo favorito se usará para escribir\n"
+"El lector de correo preferido se usará para escribir\n"
 "correos electrónicos cuando pulse sobre una dirección\n"
 "de correo electrónico."
 
@@ -917,7 +917,7 @@ msgid ""
 "The preferred Terminal Emulator will be used to\n"
 "run commands that require a CLI environment."
 msgstr ""
-"El emulador de terminal favorito se usará para\n"
+"El emulador de terminal preferido se usará para\n"
 "ejecutar comandos que requieran un entorno de\n"
 "interfaz de línea de comandos."
 
@@ -1017,7 +1017,7 @@ msgid ""
 "Browser now and click OK to proceed."
 msgstr ""
 "Por favor, elija su navegador web\n"
-"favorito ahora y pulse OK para continuar."
+"preferido ahora y pulse OK para continuar."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:286
 msgid ""
@@ -1025,7 +1025,7 @@ msgid ""
 "now and click OK to proceed."
 msgstr ""
 "Por favor, elija su lector de correo\n"
-"favorito ahora y pulse OK para continuar."
+"preferido ahora y pulse OK para continuar."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:288
 msgid ""
@@ -1033,7 +1033,7 @@ msgid ""
 "Emulator now and click OK to proceed."
 msgstr ""
 "Por favor, elija su emulador de terminal\n"
-"favorito ahora y pulse OK para continuar."
+"preferido ahora y pulse OK para continuar."
 
 #: ../exo-helper/exo-helper.c:404
 #, c-format
@@ -1048,7 +1048,7 @@ msgstr "Fallo al abrir helpers.rc para escritura"
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
 msgstr ""
-"Aplicaciones favoritas (navegador web, lector de correo y emulador de "
+"Aplicaciones preferidas (navegador web, lector de correo y emulador de "
 "terminal)"
 
 #: ../exo-helper/main.c:42
@@ -1069,7 +1069,7 @@ msgid ""
 "configuration dialog"
 msgstr ""
 "Abrir el diálogo de configuración\n"
-"de aplicaciones favoritas"
+"de aplicaciones preferidas"
 
 #: ../exo-helper/main.c:69
 msgid "Settings manager socket"
@@ -1100,9 +1100,9 @@ msgid ""
 "  TerminalEmulator - The preferred Terminal Emulator."
 msgstr ""
 "Los siguientes TIPOs son soportados por el comando --launch:\n"
-"  Navegador web       - El navegador web favorito.\n"
-"  Lector de correo       - El lector de correo favorito.\n"
-"  Emulador de terminal - El emulador de terminal favorito."
+"  Navegador web       - El navegador web preferido.\n"
+"  Lector de correo       - El lector de correo preferido.\n"
+"  Emulador de terminal - El emulador de terminal preferido."
 
 #: ../exo-helper/main.c:102
 #, c-format
@@ -1521,9 +1521,9 @@ msgid ""
 "  MailReader       - The preferred Mail Reader.\n"
 "  TerminalEmulator - The preferred Terminal Emulator."
 msgstr ""
-"  Navegador web       - El navegador web favorito.\n"
-"  Lector de correo       - El lector de correo favorito.\n"
-"  Emulador de terminal - El emulador de terminal favorito."
+"  Navegador web       - El navegador web preferido.\n"
+"  Lector de correo       - El lector de correo preferido.\n"
+"  Emulador de terminal - El emulador de terminal preferido."
 
 #: ../exo-open/main.c:82
 msgid ""
@@ -1534,7 +1534,7 @@ msgid ""
 "you can pass the command line that should be run in the terminal)."
 msgstr ""
 "Si no especifica la opción --launch, exo-open abrirá todas las URLs\n"
-"especificadas con sus gestores de URLs favoritos. En caso contrario,\n"
+"especificadas con sus gestores de URLs preferidos. En caso contrario,\n"
 "si usted especifica la opción --launch, podrá elegir que aplicación "
 "favorita\n"
 "quiere ejecutar y pasar parámetros adicionales a dicha aplicación (i.e. para "
@@ -1553,13 +1553,13 @@ msgid "Failed to open URL \"%s\"."
 msgstr "Fallo al abrir la URL \"%s\"."
 
 #~ msgid "Xfce 4 Preferred Applications"
-#~ msgstr "Aplicaciones favoritas de Xfce 4"
+#~ msgstr "Aplicaciones preferidas de Xfce 4"
 
 #~ msgid "Failed to launch exo-preferred-applications"
 #~ msgstr "Fallo al lanzar exo-preferred-applications"
 
 #~ msgid "Button Label|Preferred Applications"
-#~ msgstr "Aplicaciones favoritas"
+#~ msgstr "Aplicaciones preferidas"
 
 #, fuzzy
 #~ msgid "Select an Icon"
