--- a/po-doc/ChangeLog
+++ b/po-doc/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-18  Maximilian Schleiss <maximilian@xfce.org>
+
+	* es.po; LINGUAS: Spanish translation added (Abel Martín)
+
 2008-12-25  Maximilian Schleiss <maximilian@xfce.org>
 
 	* id.po; LINGUAS: Indonesian translation added (Andhika Padmawan)
