* da.po; LINGUAS: Danish translation added (Lars Christian Jensen)
(Old svn revision: 29287)

--- a/po-doc/ChangeLog
+++ b/po-doc/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-21 Per Kongstad <p_kongstad@op.pl>
+
+	* da.po; LINGUAS: Danish translation added (Lars Christian Jensen)
+
 2009-01-18  Maximilian Schleiss <maximilian@xfce.org>
 
 	* es.po; LINGUAS: Spanish translation added (Abel Martín)
