Added Danish translation of documentation for Libexo
(Old svn revision: 29289)

--- a/po-doc/ChangeLog
+++ b/po-doc/ChangeLog
@@ -1,4 +1,4 @@
-2009-01-21 Per Kongstad <p_kongstad@op.pl>
+2009-01-21 Per Kongstad <pko@xfce.org>
 
 	* da.po; LINGUAS: Danish translation added (Lars Christian Jensen)
 
