Update French translation
(Old svn revision: 29301)

--- a/po/fr.po
+++ b/po/fr.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: libexo\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-10 23:57+0100\n"
-"PO-Revision-Date: 2009-01-21 09:42+0100\n"
+"PO-Revision-Date: 2009-01-23 22:55+0100\n"
 "Last-Translator: Jérôme Guelfucci <jeromeg@xfce.org>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
@@ -882,14 +882,14 @@ msgstr "Internet"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:146
 msgid "Web Browser"
-msgstr "Navigateur Internet"
+msgstr "Navigateur Web"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:154
 msgid ""
 "The preferred Web Browser will be used to open\n"
 "hyperlinks and display help contents."
 msgstr ""
-"Le navigateur Internet favori sera utilisé pour ouvrir les liens\n"
+"Le navigateur Web favori sera utilisé pour ouvrir les liens\n"
 "hypertexte et afficher l'aide."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:178
@@ -945,7 +945,7 @@ msgstr "Aucune application n'est sélectionnée"
 
 #: ../exo-helper/exo-helper-chooser.c:350
 msgid "Failed to set default Web Browser"
-msgstr "Impossible de régler le navigateur Internet par défaut"
+msgstr "Impossible de régler le navigateur Web par défaut"
 
 #: ../exo-helper/exo-helper-chooser.c:351
 msgid "Failed to set default Mail Reader"
@@ -962,7 +962,7 @@ msgstr "Sélectionner une application"
 
 #: ../exo-helper/exo-helper-chooser.c:535
 msgid "Choose a custom Web Browser"
-msgstr "Choisir un navigateur Internet personnalisé"
+msgstr "Choisir un navigateur Web personnalisé"
 
 #: ../exo-helper/exo-helper-chooser.c:536
 msgid "Choose a custom Mail Reader"
@@ -978,7 +978,7 @@ msgid ""
 "as default Web Browser for Xfce:"
 msgstr ""
 "Spécifiez l'application que vous voulez utiliser\n"
-"comme navigateur Internet par défaut pour Xfce :"
+"comme navigateur Web par défaut pour Xfce :"
 
 #: ../exo-helper/exo-helper-chooser.c:543
 msgid ""
@@ -999,7 +999,7 @@ msgstr ""
 #: ../exo-helper/exo-helper-chooser.c:610
 msgid "Browse the file system to choose a custom command."
 msgstr ""
-"Naviguer dans le système de fichiers pour choisir une commande personnalisée."
+"Naviguer sur le système de fichiers pour choisir une commande personnalisée."
 
 #: ../exo-helper/exo-helper-chooser.c:793
 msgid "_Other..."
@@ -1018,7 +1018,7 @@ msgid ""
 "Please choose your preferred Web\n"
 "Browser now and click OK to proceed."
 msgstr ""
-"Veuillez choisir votre navigateur Internet\n"
+"Veuillez choisir votre navigateur Web\n"
 "favori et cliquer sur OK pour valider."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:286
@@ -1050,12 +1050,12 @@ msgstr "Impossible d'ouvrir helpers.rc en écriture"
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
 msgstr ""
-"Applications favorites (navigateur Internet, client de messagerie et émulateur de "
+"Applications favorites (navigateur Web, client de messagerie et émulateur de "
 "terminal)"
 
 #: ../exo-helper/main.c:42
 msgid "Failed to execute default Web Browser"
-msgstr "Impossible de lancer le navigateur Internet par défaut"
+msgstr "Impossible de lancer le navigateur Web par défaut"
 
 #: ../exo-helper/main.c:43
 msgid "Failed to execute default Mail Reader"
@@ -1103,7 +1103,7 @@ msgid ""
 msgstr ""
 "Les TYPEs suivants sont pris en charge par la commande --launch :\n"
 "\n"
-"  WebBrowser       - Le navigateur Internet favori.\n"
+"  WebBrowser       - Le navigateur Web favori.\n"
 "  MailReader       - Le client de messagerie favori.\n"
 "  TerminalEmulator - L'émulateur de terminal favori."
 
@@ -1173,7 +1173,7 @@ msgstr "Encompass"
 
 #: ../exo-helper/helpers/epiphany.desktop.in.in.h:1
 msgid "Epiphany Web Browser"
-msgstr "Navigateur Internet Epiphany"
+msgstr "Navigateur Web Epiphany"
 
 #: ../exo-helper/helpers/eterm.desktop.in.in.h:1
 msgid "Enlightened Terminal Emulator"
@@ -1189,7 +1189,7 @@ msgstr "Mozilla Firefox"
 
 #: ../exo-helper/helpers/galeon.desktop.in.in.h:1
 msgid "Galeon Web Browser"
-msgstr "Navigateur Internet Galeon"
+msgstr "Navigateur Web Galeon"
 
 #: ../exo-helper/helpers/gnome-terminal.desktop.in.in.h:1
 msgid "GNOME Terminal"
@@ -1201,15 +1201,15 @@ msgstr "KMail"
 
 #: ../exo-helper/helpers/konqueror.desktop.in.in.h:1
 msgid "Konqueror Web Browser"
-msgstr "Navigateur Internet Konqueror"
+msgstr "Navigateur Web Konqueror"
 
 #: ../exo-helper/helpers/links.desktop.in.in.h:1
 msgid "Links Text Browser"
-msgstr "Navigateur Internet en mode texte Links"
+msgstr "Navigateur Web en mode texte Links"
 
 #: ../exo-helper/helpers/lynx.desktop.in.in.h:1
 msgid "Lynx Text Browser"
-msgstr "Navigateur Internet en mode texte Lynx"
+msgstr "Navigateur Web en mode texte Lynx"
 
 #: ../exo-helper/helpers/midori.desktop.in.in.h:1
 msgid "Midori"
@@ -1261,7 +1261,7 @@ msgstr "RXVT Unicode"
 
 #: ../exo-helper/helpers/w3m.desktop.in.in.h:1
 msgid "W3M Text Browser"
-msgstr "Navigateur Internet en mode texte W3M"
+msgstr "Navigateur Web en mode texte W3M"
 
 #: ../exo-helper/helpers/xterm.desktop.in.in.h:1
 msgid "X Terminal"
@@ -1529,7 +1529,7 @@ msgid ""
 "  MailReader       - The preferred Mail Reader.\n"
 "  TerminalEmulator - The preferred Terminal Emulator."
 msgstr ""
-"  WebBrowser       - Le navigateur Internet favori.\n"
+"  WebBrowser       - Le navigateur Web favori.\n"
 "  MailReader       - Le client de messagerie favori.\n"
 "  TerminalEmulator - L'émulateur de terminal favori."
 
