* == Released 0.3.99.1 == 	* NEWS: Update news for the release. 	* configure.in.in: Update version number.  	* fr.po: Update translation files.
(Old svn revision: 29324)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
-2009-01-18	Jannis Pohlmann <jannis@xfce.org>
+2009-01-25	Jannis Pohlmann <jannis@xfce.org>
+
+	* == Released 0.3.99.1 == 
+	* NEWS: Update news for the release.
+	* configure.in.in: Update version number.
+
+2009-01-18	Jannis Pohlmann <jannis@xfce.org> 
 
 	* configure.in.in: Add Makefiles for Spanish docs.
 
