--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+0.3.99.1
+========
+- Updated translations: da (Lars Chrisitan Jensen, Per Kongstad), 
+  es (Abel Martín), fr (Maximilian Schleiss, Mike Massonnet), 
+  id (Andhika Padmawan), pt_BR (Og Maciel, tr (Gökmen Görgen).
+
 0.3.93
 ======
 - Don't setup bindings for <Shift>n and <Shift>p in ExoIconView so that
