--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-25	Jannis Pohlmann <jannis@xfce.org>
+
+	* fr.po: Update translation files.
+
 2009-01-23  Mike Massonnet <mmassonnet@xfce.org>
 
 	* fr.po: French translation review
