Update NEWS, Changelog and Version
(Old svn revision: 29440)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-02-03  Stephan Arts <stephan@xfce.org>
+
+	* == Released 0.3.99.2 == 
+	* NEWS: Update news for the release.
+	* configure.in.in: Update version number.
+
 2009-01-25	Jannis Pohlmann <jannis@xfce.org>
 
 	* == Released 0.3.99.1 == 
