--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+0.3.99.2
+========
+- Updated translations: fr (Mike Massonnet), tr (Eren Türkay)
+
 0.3.99.1
 ========
 - Updated translations: da (Lars Chrisitan Jensen, Per Kongstad), 
