Translations updates - en_GB es
(Old svn revision: 29443)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,10 @@
+2009-02-03  Maximilian Schleiss <maximilian@xfce.org>
+
+	* en_GB.po: British English translation update (Jeff Bailes)
+
 2009-01-31  Eren Türkay <erenturkay@xfce.org>
 
-    * tr.po: Turkish translation update (Gökmen Görgen, Samed Beyribey)
+	* tr.po: Turkish translation update (Gökmen Görgen, Samed Beyribey)
 
 2009-01-25	Jannis Pohlmann <jannis@xfce.org>
 
