Translations udaptes - de id ja nb pl zh_CN
(Old svn revision: 29472)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-07  Maximilian Schleiss <maximilian@xfce.org>
+
+	* pl.po: Polish translation update (Piotr Sokół)
+
 2009-02-03  Maximilian Schleiss <maximilian@xfce.org>
 
 	* en_GB.po: British English translation update (Jeff Bailes)
