Update NEWS, ChangeLog and version information
(Old svn revision: 29568)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+0.3.100
+=======
+- Updated translations: ro (Mișu Moldovan), el (Stavros Giannouris), 
+  es (Abel Martín), gl (Leandro Requeiro), zh_CN (Chris K. Zhang),
+  pl (Piotr Sokół), en_GB (Jeff Bailes)
+
+
 0.3.99.2
 ========
 - Updated translations: fr (Mike Massonnet), tr (Eren Türkay)
