--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-02-24  Stephan Arts <stephan@xfce.org>
+
+	* == Released 0.3.9.100 ==
+	* NEWS: Update news for the release.
+	* configure.in.in: Update version number.
+
 2009-02-03  Stephan Arts <stephan@xfce.org>
 
 	* == Released 0.3.99.2 == 
