Translations updates - es pl uk
(Old svn revision: 29639)

--- a/po/pl.po
+++ b/po/pl.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-10 23:57+0100\n"
-"PO-Revision-Date: 2009-01-29 17:57+0100\n"
+"PO-Revision-Date: 2009-02-13 17:51+0100\n"
 "Last-Translator: Piotr Sokół <piotr.sokol@10g.pl>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -865,7 +865,7 @@ msgstr "Nośnik wymienny %s "
 #: ../exo-hal/exo-hal.c:804
 #, c-format
 msgid "%s Volume"
-msgstr "Wolumin %s"
+msgstr "Wolumen %s"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:103
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:1
@@ -1070,7 +1070,7 @@ msgstr "Otwórz okno konfiguracji preferowanych programów"
 
 #: ../exo-helper/main.c:69
 msgid "Settings manager socket"
-msgstr ""
+msgstr "Określa gniazdo menedżera ustawień"
 
 #: ../exo-helper/main.c:69
 msgid "SOCKET ID"
@@ -1276,19 +1276,19 @@ msgstr "Urządzenie „%s” nie zostało znalezione w systemowej tablicy urząd
 #: ../exo-mount/exo-mount-hal.c:280
 #, c-format
 msgid "Given device \"%s\" is not a volume or drive"
-msgstr "Podane urządzenie „%s” nie jest woluminem ani napędem"
+msgstr "Podane urządzenie „%s” nie jest wolumenem ani napędem"
 
 #. TRANSLATORS: The user tried to eject a device although he's not privileged to do so.
 #: ../exo-mount/exo-mount-hal.c:605
 #, c-format
 msgid "You are not privileged to eject the volume \"%s\""
-msgstr "Brak wystarczających uprawnień by wysunąć wolumin „%s”"
+msgstr "Brak wystarczających uprawnień by wysunąć wolumen „%s”"
 
 #. TRANSLATORS: An application is blocking a mounted volume from being ejected.
 #: ../exo-mount/exo-mount-hal.c:610
 #, c-format
 msgid "An application is preventing the volume \"%s\" from being ejected"
-msgstr "Program uniemożliwia wysunięcie woluminu „%s”"
+msgstr "Program uniemożliwia wysunięcie wolumenu „%s”"
 
 #. TRANSLATORS: User tried to mount a volume, but is not privileged to do so.
 #: ../exo-mount/exo-mount-hal.c:841
@@ -1322,19 +1322,19 @@ msgstr "Program uniemożliwia zniszczenie warstwy kryptograficznej"
 #: ../exo-mount/exo-mount-hal.c:1021
 #, c-format
 msgid "You are not privileged to unmount the volume \"%s\""
-msgstr "Brak wystarczających uprawnień by odmontować wolumin „%s”"
+msgstr "Brak wystarczających uprawnień by odmontować wolumen „%s”"
 
 #. TRANSLATORS: An application is blocking a volume from being unmounted.
 #: ../exo-mount/exo-mount-hal.c:1026
 #, c-format
 msgid "An application is preventing the volume \"%s\" from being unmounted"
-msgstr "Program uniemożliwia odmontowanie woluminu „%s”"
+msgstr "Program uniemożliwia odmontowanie wolumenu „%s”"
 
 #. TRANSLATORS: HAL can only unmount volumes that were mounted via HAL.
 #: ../exo-mount/exo-mount-hal.c:1031
 #, c-format
 msgid "The volume \"%s\" was probably mounted manually on the command line"
-msgstr "Wolumin „%s” został prawdopodobnie ręcznie zamontowany z poziomu terminala"
+msgstr "Wolumen „%s” został prawdopodobnie ręcznie zamontowany za pomocą terminala"
 
 #: ../exo-mount/main.c:65
 msgid "Eject rather than mount"
