--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-03-01  Maximilian Schleiss <maximilian@xfce.org>
+
+	* es.po: Spanish translation update (Abel Martín)
+	* pl.po: Polish translation update (Piotr Sokół)
+
 2009-02-22  Mike Massonnet <mmassonnet@xfce.org>
 
 	* ro.po: Update Romanian translation (Mișu Moldovan)
