--- a/po/es.po
+++ b/po/es.po
@@ -2,14 +2,14 @@
 # Copyright (C) 2004-2006 os-cillation e.K.
 # This file is distributed under the same license as the libexo package.
 # Patricio Carr <pato@patocarr.com>, 2005.
-# Abel Martín <abel.martin.ruiz@gmail.com>, 2008.
+# Abel Martín <abel.martin.ruiz@gmail.com>, 2008-2009.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-10 23:57+0100\n"
-"PO-Revision-Date: 2009-01-29 23:14+0100\n"
+"PO-Revision-Date: 2009-02-24 13:39+0100\n"
 "Last-Translator: Abel Martín <abel.martin.ruiz@gmail.com>\n"
 "Language-Team: Spanish/ES <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
@@ -77,7 +77,7 @@ msgstr "Columna pixbuf"
 #: ../exo/exo-icon-bar.c:267
 #: ../exo/exo-icon-view.c:803
 msgid "Model column used to retrieve the icon pixbuf from"
-msgstr "Modelo de columna desde donde recuperar el pixbuf de icono"
+msgstr "Columna del modelo desde donde recuperar el pixbuf de icono"
 
 #: ../exo/exo-icon-bar.c:282
 #: ../exo/exo-icon-view.c:929
@@ -87,7 +87,7 @@ msgstr "Columna de texto"
 #: ../exo/exo-icon-bar.c:283
 #: ../exo/exo-icon-view.c:930
 msgid "Model column used to retrieve the text from"
-msgstr "Modelo de columna desde donde recuperar el texto"
+msgstr "Columna del modelo desde donde recuperar el texto"
 
 #: ../exo/exo-icon-bar.c:295
 msgid "Icon Bar Model"
@@ -113,7 +113,7 @@ msgstr "Color de relleno del elemento activo"
 #: ../exo/exo-icon-bar.c:326
 #: ../exo/exo-icon-bar.c:327
 msgid "Active item border color"
-msgstr "Color de borde del item activo"
+msgstr "Color de borde del elemento activo"
 
 #: ../exo/exo-icon-bar.c:333
 #: ../exo/exo-icon-bar.c:334
@@ -193,7 +193,7 @@ msgstr "Iconos de estado"
 #. EXO_ICON_CHOOSER_CONTEXT_OTHER
 #: ../exo/exo-icon-chooser-dialog.c:107
 msgid "Uncategorized Icons"
-msgstr "Iconos sin categorizar"
+msgstr "Iconos sin clasificar"
 
 #. EXO_ICON_CHOOSER_CONTEXT_ALL
 #: ../exo/exo-icon-chooser-dialog.c:111
@@ -265,7 +265,7 @@ msgstr "Columna de marcado"
 
 #: ../exo/exo-icon-view.c:757
 msgid "Model column used to retrieve the text if using Pango markup"
-msgstr "Modelo de columna usado para recuperar el texto si se usa marcado de Pango"
+msgstr "Columna del modelo usado para recuperar el texto si se usa marcado de Pango"
 
 #: ../exo/exo-icon-view.c:771
 msgid "Icon View Model"
@@ -390,7 +390,7 @@ msgstr "_Añadir una nueva barra de herramientas"
 
 #: ../exo/exo-toolbars-editor.c:230
 msgid "Drag an item onto the toolbars above to add it, from the toolbars in the items table to remove it."
-msgstr "Arrastrar un elemento sobre la barra de herramientas de encima para añadirlo, desde la barra de herramientas a la tabla de elementos para borrarlo."
+msgstr "Arrastrar un elemento sobre la barra de herramientas de encima para añadirlo; desde la barra de herramientas a la tabla de elementos para borrarlo."
 
 #: ../exo/exo-toolbars-editor.c:543
 msgid "Separator"
@@ -418,7 +418,7 @@ msgstr "Texto p_ara todos los iconos"
 
 #: ../exo/exo-toolbars-view.c:802
 msgid "Text for I_mportant Icons"
-msgstr "Texto para los iconos _Importantes"
+msgstr "Texto para los iconos _importantes"
 
 #: ../exo/exo-toolbars-view.c:810
 msgid "_Remove Toolbar"
@@ -501,7 +501,7 @@ msgstr "  -h, --help        Mostrar este mensaje de ayuda y salir\n"
 #: ../exo-csource/main.c:289
 #, c-format
 msgid "  -V, --version     Print version information and exit\n"
-msgstr "  -V, --version     Mostrar información de la versión y salir\n"
+msgstr "  -V, --version     Mostrar información de versión y salir\n"
 
 #: ../exo-csource/main.c:290
 #, c-format
@@ -521,7 +521,7 @@ msgstr "  --name=identificador de macro de C/nombre de variable\n"
 #: ../exo-csource/main.c:293
 #, c-format
 msgid "  --build-list      Parse (name, file) pairs\n"
-msgstr "  --build-list      Parsear pares (nombre, archivo)\n"
+msgstr "  --build-list      Procesar pares (nombre, archivo)\n"
 
 #: ../exo-csource/main.c:294
 #, c-format
@@ -578,12 +578,12 @@ msgstr ""
 #: ../exo-open/main.c:137
 #, c-format
 msgid "Please report bugs to <%s>.\n"
-msgstr "Por favor, informe de los errores a <%s>.\n"
+msgstr "Por favor, informe de errores a <%s>.\n"
 
 #. allocate the file chooser
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:290
 msgid "Select an Application"
-msgstr "Seleccione una Aplicación"
+msgstr "Seleccione una aplicación"
 
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:299
 #: ../exo-helper/exo-helper-chooser.c:432
@@ -613,7 +613,7 @@ msgstr "Scripts de Ruby"
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:337
 #: ../exo-helper/exo-helper-chooser.c:470
 msgid "Shell Scripts"
-msgstr "Scripts de Shell"
+msgstr "Scripts de shell"
 
 #: ../exo-desktop-item-edit/exo-die-desktop-model.c:326
 #, c-format
@@ -710,23 +710,23 @@ msgstr "Tipo de archivo de escritorio a crear (applicación o enlace)"
 
 #: ../exo-desktop-item-edit/main.c:74
 msgid "Preset name when creating a desktop file"
-msgstr "Preestablecer el nombre al crear un archivo de escritorio"
+msgstr "Nombre por defecto al crear un archivo de escritorio"
 
 #: ../exo-desktop-item-edit/main.c:75
 msgid "Preset comment when creating a desktop file"
-msgstr "Preestablecer comentario al crear un archivo de escritorio"
+msgstr "Comentario por defecto al crear un archivo de escritorio"
 
 #: ../exo-desktop-item-edit/main.c:76
 msgid "Preset command when creating a launcher"
-msgstr "Preestablecer comando al crear un lanzador"
+msgstr "Comando por defecto al crear un lanzador"
 
 #: ../exo-desktop-item-edit/main.c:77
 msgid "Preset URL when creating a link"
-msgstr "Preestablecer URL al crear un enlace"
+msgstr "URL por defecto al crear un enlace"
 
 #: ../exo-desktop-item-edit/main.c:78
 msgid "Preset icon when creating a desktop file"
-msgstr "Preestablecer icono al crear un archivo de escritorio"
+msgstr "Icono por defecto al crear un archivo de escritorio"
 
 #: ../exo-desktop-item-edit/main.c:79
 #: ../exo-helper/main.c:67
@@ -820,7 +820,7 @@ msgstr "Unidad Jaz"
 
 #: ../exo-hal/exo-hal.c:485
 msgid "Pen Drive"
-msgstr "Pen drive"
+msgstr "Memoria USB"
 
 #. TRANSLATORS: This string requires special care as %s may be the empty string. Trailing/leading whitespace will be removed.
 #: ../exo-hal/exo-hal.c:494
@@ -862,7 +862,7 @@ msgstr "Dispositivo extraíble %s"
 #: ../exo-hal/exo-hal.c:804
 #, c-format
 msgid "%s Volume"
-msgstr "Dispositivo %s"
+msgstr "Volumen %s"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:103
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:1
@@ -1005,11 +1005,11 @@ msgstr "_Otro..."
 
 #: ../exo-helper/exo-helper-chooser.c:794
 msgid "Use a custom application which is not included in the above list."
-msgstr "Usar una aplicación personalizada que no se incluye en la lista de arriba."
+msgstr "Usar una aplicación personalizada que no esté incluida en la lista de arriba."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:141
 msgid "Choose Preferred Application"
-msgstr "Elegir aplicación favorita"
+msgstr "Elegir aplicación preferida"
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:284
 msgid ""
@@ -1079,7 +1079,7 @@ msgstr "ID de SOCKET"
 
 #: ../exo-helper/main.c:70
 msgid "Launch the default helper of TYPE with the optional PARAMETER, where TYPE is one of the following values."
-msgstr "Lanzar la aplicación auxiliar para TIPO con el PARÁMETRO opcional, donde TIPO es uno de los siguientes valores."
+msgstr "Lanzar la aplicación auxiliar de TIPO con el PARÁMETRO opcional, donde TIPO es uno de los siguientes valores."
 
 #: ../exo-helper/main.c:70
 msgid "TYPE [PARAMETER]"
@@ -1094,9 +1094,10 @@ msgid ""
 "  TerminalEmulator - The preferred Terminal Emulator."
 msgstr ""
 "Los siguientes TIPOs son soportados por el comando --launch:\n"
-"  Navegador web       - El navegador web preferido.\n"
-"  Lector de correo       - El lector de correo preferido.\n"
-"  Emulador de terminal - El emulador de terminal preferido."
+"\n"
+"  WebBrowser       - El navegador web preferido.\n"
+"  MailReader       - El lector de correo preferido.\n"
+"  TerminalEmulator - El emulador de terminal preferido."
 
 #: ../exo-helper/main.c:102
 #, c-format
@@ -1387,7 +1388,7 @@ msgstr "No se puede expulsar y desmontar simultáneamente"
 #: ../exo-mount/main.c:330
 #, c-format
 msgid "Failed to eject \"%s\""
-msgstr "Fallo al expulsar  \"%s\""
+msgstr "Fallo al expulsar \"%s\""
 
 #: ../exo-mount/main.c:332
 #, c-format
@@ -1403,11 +1404,11 @@ msgstr "Fallo al montar \"%s\""
 #: ../exo-mount-notify/main.c:113
 #, c-format
 msgid "The device \"%s\" is now safe to remove."
-msgstr "El dispositivo \"%s\" puede ser extraído con seguridad."
+msgstr "El dispositivo \"%s\" puede ser extraído de forma segura."
 
 #: ../exo-mount-notify/main.c:114
 msgid "Device is now safe to remove"
-msgstr "El dispositivo ya puede ser extraído con seguridad."
+msgstr "El dispositivo ya puede ser extraído de forma segura."
 
 #. read-only, just ejecting
 #: ../exo-mount-notify/main.c:226
@@ -1461,7 +1462,7 @@ msgid ""
 "                                      TYPE with the optional PARAMETERs, where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
-"  --launch TIPO [PARÁMETROs...]       Lanza la aplicación favorita de\n"
+"  --launch TIPO [PARÁMETROs...]       Lanza la aplicación preferida de\n"
 "                                      TIPO con los PARÁMETROs opcionales, donde\n"
 "                                      TIPO es uno de los siguientes valores."
 
@@ -1486,9 +1487,9 @@ msgid ""
 "  MailReader       - The preferred Mail Reader.\n"
 "  TerminalEmulator - The preferred Terminal Emulator."
 msgstr ""
-"  Navegador web       - El navegador web preferido.\n"
-"  Lector de correo       - El lector de correo preferido.\n"
-"  Emulador de terminal - El emulador de terminal preferido."
+"  WebBrowser       - El navegador web preferido.\n"
+"  MailReader       - El lector de correo preferido.\n"
+"  TerminalEmulator - El emulador de terminal preferido."
 
 #: ../exo-open/main.c:82
 msgid ""
@@ -1500,7 +1501,7 @@ msgid ""
 msgstr ""
 "Si no especifica la opción --launch, exo-open abrirá todas las URLs\n"
 "especificadas con sus gestores de URLs preferidos. En caso contrario,\n"
-"si usted especifica la opción --launch, podrá elegir que aplicación favorita\n"
+"si usted especifica la opción --launch, podrá elegir qué aplicación preferida\n"
 "quiere ejecutar y pasar parámetros adicionales a dicha aplicación (i.e. para el\n"
 "Emulador de Terminal, puede pasar la línea de comando que se debería\n"
 "ejecutar dentro del terminal)."
@@ -1508,7 +1509,7 @@ msgstr ""
 #: ../exo-open/main.c:149
 #, c-format
 msgid "Failed to launch preferred application for category \"%s\"."
-msgstr "Fallo al lanzar la aplicación favorita para la categoría \"%s\"."
+msgstr "Fallo al lanzar la aplicación preferida para la categoría \"%s\"."
 
 #: ../exo-open/main.c:170
 #, c-format
