Translations updates - pt_PT
(Old svn revision: 29641)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-02  Maximilian Schleiss <maximilian@xfce.org>
+
+	* pt_PT: European Portuguese translation update (Nuno Miguel)
+
 2009-03-01  Maximilian Schleiss <maximilian@xfce.org>
 
 	* es.po: Spanish translation update (Abel Martín)
