Updated Polish translations
(Old svn revision: 29647)

--- a/po/pl.po
+++ b/po/pl.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-10 23:57+0100\n"
-"PO-Revision-Date: 2009-02-13 17:51+0100\n"
+"PO-Revision-Date: 2009-03-08 15:19+0100\n"
 "Last-Translator: Piotr Sokół <piotr.sokol@10g.pl>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -687,11 +687,11 @@ msgstr "Wybór ikony"
 #. --- constants ---
 #: ../exo-desktop-item-edit/main.c:50
 msgid "Create Launcher"
-msgstr "Tworzenie aktywatora"
+msgstr "Nowy aktywator"
 
 #: ../exo-desktop-item-edit/main.c:50
 msgid "Create Link"
-msgstr "Tworzenie odnośnika"
+msgstr "Nowy odnośnik"
 
 #: ../exo-desktop-item-edit/main.c:51
 msgid "Edit Launcher"
@@ -874,7 +874,7 @@ msgstr "Preferowane programy"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:104
 msgid "Select default applications for various services"
-msgstr "Ustala domyślne programy dla różnych usług"
+msgstr "Wybiera domyślne programy dla różnych usług"
 
 #.
 #. Internet
