Translations updates - da es fr gl it nn
(Old svn revision: 29660)

--- a/po/es.po
+++ b/po/es.po
@@ -1071,7 +1071,7 @@ msgstr ""
 
 #: ../exo-helper/main.c:69
 msgid "Settings manager socket"
-msgstr "Socket del gestor de configuración"
+msgstr "Socket del administrador de configuración"
 
 #: ../exo-helper/main.c:69
 msgid "SOCKET ID"
