--- a/po-doc/ChangeLog
+++ b/po-doc/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-13  Maximilian Schleiss <maximilian@xfce.org>
+
+	* it.po, LINGUAS: Italian translation added (Cristian Marchi)
+
 2009-01-25  Maximilian Schleiss <maximilian@xfce.org>
 
 	* ja.po: Japanese translation update (Masato Hashimoto)
