--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2009-03-14  Maximilian Schleiss <maximilian@xfce.org>
+
+	* es.po: Spanish translation update (Abel Martín)
+	* gl.po: Galician translation update (Leandro Regueiro)
+	* it.po: Italian translation update (Cristian Marchi)
+
 2009-03-05  Mike Massonnet <mmassonnet@xfce.org>
 
 	* pt.po: Renamed pt_PT.po to pt.po (bug #4574)
