* ja.po: Japanese translation update (Masato Hashimoto) 	* ja.po: Japanese translation update (Masato Hashimoto) 	* ja.po: Japanese translation update (Masato Hashimoto) 	* ja.po: Japanese translation update (Masato Hashimoto) 	* ja.po: Japanese translation update (Masato Hashimoto) 	* ja.po: Japanese translation update (Masato Hashimoto) 	* ja.po: Japanese translation update (Masato Hashimoto) 	* ja.po: Japanese translation update (Masato Hashimoto) 	* ja.po: Japanese translation update (Masato Hashimoto) 	* ja.po: Japanese translation update (Masato Hashimoto) 	* ja.po: Japanese translation update (Masato Hashimoto) 	* ja.po: Japanese translation update (Masato Hashimoto) 	* ja.po: Japanese translation update (Masato Hashimoto) 	* ja.po: Japanese translation update (Masato Hashimoto) 	* ja.po: Japanese translation update (Masato Hashimoto) 	* ja.po: Japanese translation update (Masato Hashimoto)
(Old svn revision: 29675)

--- a/po/ja.po
+++ b/po/ja.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-10 23:57+0100\n"
-"PO-Revision-Date: 2008-11-30 17:21+0900\n"
+"PO-Revision-Date: 2009-03-12 13:25+0900\n"
 "Last-Translator: Masato Hashimoto <cabezon.hashimoto@gmail.com>\n"
 "Language-Team: Japanese <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
@@ -754,7 +754,7 @@ msgstr "リンクを作成"
 
 #: ../exo-desktop-item-edit/main.c:51
 msgid "Edit Launcher"
-msgstr "ランチャを編集"
+msgstr "ランチャの編集"
 
 #: ../exo-desktop-item-edit/main.c:51
 msgid "Edit Link"
