Quote arguments passed to exo-open (bug #5132).
(Old svn revision: 29679)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+0.3.xxx
+=======
+- Quote arguments passed to exo-open (bug #5132).
+
 0.3.100
 =======
 - Updated translations: ro (Mișu Moldovan), el (Stavros Giannouris), 
