Translations updates - es it ku
(Old svn revision: 29689)

--- a/po/es.po
+++ b/po/es.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-10 23:57+0100\n"
-"PO-Revision-Date: 2009-02-24 13:39+0100\n"
+"PO-Revision-Date: 2009-03-19 12:06+0100\n"
 "Last-Translator: Abel Martín <abel.martin.ruiz@gmail.com>\n"
 "Language-Team: Spanish/ES <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
@@ -40,7 +40,7 @@ msgstr "tamaño"
 
 #: ../exo/exo-cell-renderer-icon.c:190
 msgid "The size of the icon to render in pixels."
-msgstr "El tamaño del icono a dibujar en pixels"
+msgstr "El tamaño del icono a dibujar en pixels."
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:770
 #: ../exo/exo-mount-point.c:208
@@ -341,19 +341,19 @@ msgstr "Espacio que se inserta entre celdas de un elemento"
 
 #: ../exo/exo-icon-view.c:937
 msgid "Selection Box Color"
-msgstr "Color de caja de selección"
+msgstr "Color de cuadro de selección"
 
 #: ../exo/exo-icon-view.c:938
 msgid "Color of the selection box"
-msgstr "Color de la caja de selección"
+msgstr "Color de la cuadro de selección"
 
 #: ../exo/exo-icon-view.c:944
 msgid "Selection Box Alpha"
-msgstr "Alfa de caja de selección"
+msgstr "Alfa de cuadro de selección"
 
 #: ../exo/exo-icon-view.c:945
 msgid "Opacity of the selection box"
-msgstr "Opacidad de la caja de selección"
+msgstr "Opacidad del cuadro de selección"
 
 #: ../exo/exo-thumbnail-preview.c:123
 msgid "Preview"
@@ -932,7 +932,7 @@ msgstr "Fallo al abrir el visor de documentación."
 #: ../exo-helper/exo-helper-chooser.c:184
 #: ../exo-helper/exo-helper-chooser.c:191
 msgid "Press left mouse button to change the selected application."
-msgstr "Presione el botón izquierdo del ratón para cambiar la aplicación seleccionada."
+msgstr "Pulse el botón izquierdo del ratón para cambiar la aplicación seleccionada."
 
 #: ../exo-helper/exo-helper-chooser.c:190
 msgid "Application Chooser Button"
@@ -1079,7 +1079,7 @@ msgstr "ID de SOCKET"
 
 #: ../exo-helper/main.c:70
 msgid "Launch the default helper of TYPE with the optional PARAMETER, where TYPE is one of the following values."
-msgstr "Lanzar la aplicación auxiliar de TIPO con el PARÁMETRO opcional, donde TIPO es uno de los siguientes valores."
+msgstr "Ejecutar la aplicación auxiliar de TIPO con el PARÁMETRO opcional, donde TIPO es uno de los siguientes valores."
 
 #: ../exo-helper/main.c:70
 msgid "TYPE [PARAMETER]"
@@ -1300,12 +1300,12 @@ msgstr "No tiene privilegios para montar el volumen \"%s\""
 #: ../exo-mount/exo-mount-hal.c:856
 #, c-format
 msgid "Blank discs cannot be mounted, use a CD recording application like Xfburn to record audio or data on the disc"
-msgstr "Los discos vírgenes no pueden ser montados. Use una aplicación de grabación de CD como Xfburn para grabar audio o datos en el disco."
+msgstr "Los discos vírgenes no pueden ser montados. Use una aplicación de grabación de CD como Xfburn para grabar audio o datos en el disco"
 
 #: ../exo-mount/exo-mount-hal.c:867
 #, c-format
 msgid "Audio CDs cannot be mounted, use Xfmedia to play the audio tracks"
-msgstr "Los CDs de audio no pueden ser montados. Use Xfmedia para reproducir las pistas de audio."
+msgstr "Los CDs de audio no pueden ser montados. Use Xfmedia para reproducir las pistas de audio"
 
 #. TRANSLATORS: The user tried to eject a device although he's not privileged to do so.
 #: ../exo-mount/exo-mount-hal.c:932
@@ -1408,7 +1408,7 @@ msgstr "El dispositivo \"%s\" puede ser extraído de forma segura."
 
 #: ../exo-mount-notify/main.c:114
 msgid "Device is now safe to remove"
-msgstr "El dispositivo ya puede ser extraído de forma segura."
+msgstr "El dispositivo ya puede ser extraído de forma segura"
 
 #. read-only, just ejecting
 #: ../exo-mount-notify/main.c:226
@@ -1509,7 +1509,7 @@ msgstr ""
 #: ../exo-open/main.c:149
 #, c-format
 msgid "Failed to launch preferred application for category \"%s\"."
-msgstr "Fallo al lanzar la aplicación preferida para la categoría \"%s\"."
+msgstr "Fallo al ejecutar la aplicación preferida para la categoría \"%s\"."
 
 #: ../exo-open/main.c:170
 #, c-format
