Updated Polish translations
(Old svn revision: 29690)

--- a/po/pl.po
+++ b/po/pl.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-10 23:57+0100\n"
-"PO-Revision-Date: 2009-03-16 15:38+0100\n"
+"PO-Revision-Date: 2009-03-29 14:28+0100\n"
 "Last-Translator: Piotr Sokół <piotr.sokol@10g.pl>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -829,7 +829,7 @@ msgstr "Pen Drive"
 #: ../exo-hal/exo-hal.c:494
 #, c-format
 msgid "%s Music Player"
-msgstr "Odtwarzacz multimedialny %s"
+msgstr "Odtwarzacz muzyczny %s"
 
 #. TRANSLATORS: This string requires special care as %s may be the empty string. Trailing/leading whitespace will be removed.
 #: ../exo-hal/exo-hal.c:509
@@ -1082,7 +1082,7 @@ msgstr "ID gniazda"
 msgid "Launch the default helper of TYPE with the optional PARAMETER, where TYPE is one of the following values."
 msgstr ""
 "Uruchamia domyślny program określonego typu\n"
-"                                  z opcjonalnym parametrem"
+"                                  z opcjonalnymi parametrami"
 
 #: ../exo-helper/main.c:70
 msgid "TYPE [PARAMETER]"
@@ -1449,7 +1449,7 @@ msgstr "Użycie: exo-open [ADRES URL...]"
 
 #: ../exo-open/main.c:60
 msgid "       exo-open --launch TYPE [PARAMETERs...]"
-msgstr "        exo-open --launch TYP [PARAMETR(Y)...]"
+msgstr "        exo-open --launch TYP [PARAMETR...]"
 
 #: ../exo-open/main.c:62
 msgid "  -?, --help                          Print this help message and exit"
@@ -1465,7 +1465,7 @@ msgid ""
 "                                      TYPE with the optional PARAMETERs, where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
-"  --launch TYP [PARAMETR...]       Uruchamia preferowany program dla\n"
+"  --launch TYP [PARAMETR...]          Uruchamia preferowany program dla\n"
 "                                      określonego typu z opcjonalnymi\n"
 "                                      parametrami."
 
